--- a/bs/mobile/android/chrome/localepicker.properties
+++ b/bs/mobile/android/chrome/localepicker.properties
@@ -2,6 +2,16 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+title=Izaberite jezik
+continueIn=Nastavi u %S
 
 # LOCALIZATION NOTE (name): The localized name of this locale.
 # Do not just translate the word 'English'
+name=Engleski
+choose=Izaberite drugi jezik
+chooseLanguage=Izaberite jezik
+cancel=Otkaži
+continue=Nastavi
+installing=Instaliram %S
+installerror=Greška pri instalaciji jezika
+loading=Učitavanje…
