[bs] update from Pootle (mobile)

--- a/bs/mobile/android/chrome/browser.properties
+++ b/bs/mobile/android/chrome/browser.properties
@@ -79,6 +79,7 @@ notificationRestart.button=Restartuj
 
 # LOCALIZATION NOTE (popup.message): Semicolon-separated list of plural forms.
 # #1 is brandShortName and #2 is the number of pop-ups blocked.
+popup.message=#1 je spriječio stranicu da otvori pop-up prozor. Želite li ga prikazati?;#1 je spriječio stranicu da otvori #2 pop-up prozora. Želite li ih prikazati?
 popup.dontAskAgain=Ne pitaj ponovo za ovu stranicu
 popup.show=Prikaži
 popup.dontShow=Ne prikazuj
@@ -88,6 +89,7 @@ safeBrowsingDoorhanger=Stranica je indentificirana da sadržava zlonamjerne prog
 
 # LOCALIZATION NOTE (blockPopups.label): Label that will be used in
 # site settings dialog.
+blockPopups.label=Blokiraj pop-upe
 
 # XPInstall
 xpinstallPromptWarning2=%S je spriječio ovu stranicu (%S) da od vas zatraži instalaciju softvera na uređaj.
@@ -222,6 +224,8 @@ selectionHelper.textCopied=Tekst kopiran na clipboard
 # LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
 # dialog/prompt.
 casting.sendToDevice=Pošalji na uređaj
+casting.mirrorTab=Odražavanje taba
+casting.mirrorTabStop=Zaustavi odražavanje
 
 # Context menu
 contextmenu.openInNewTab=Otvori link u novom tabu
@@ -250,6 +254,8 @@ contextmenu.playMedia=Play
 contextmenu.pauseMedia=Pauza
 contextmenu.shareMedia=Podijeli video
 contextmenu.showControls2=Prikaži kontrole
+contextmenu.mute=Isključi zvuk
+contextmenu.unmute=Uključi zvuk
 contextmenu.saveVideo=Spasi video
 contextmenu.saveAudio=Spasi audio
 contextmenu.addToContacts=Dodaj u kontakte
