--- a/bs/mobile/android/chrome/pippki.properties
+++ b/bs/mobile/android/chrome/pippki.properties
@@ -2,7 +2,40 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+nssdialogs.ok.label=OK
+nssdialogs.cancel.label=Otkaži
 
 # These strings are stolen from security/manager/locales/en-US/chrome/pippki/pippki.dtd
+downloadCert.title=Preuzimam certifikate
+downloadCert.message1=Upitani ste da li vjerujete novom Certifikacijskom Autoritetu (CA).
+downloadCert.viewCert.label=Prikaži
+downloadCert.trustSSL=Vjeruj za identifikaciju web stranica.
+downloadCert.trustEmail=Vjeruj za identifikaciju email korisnika.
+downloadCert.trustObjSign=Vjeruj za identifikaciju developera softvera.
+caCertExists.title=Certifikat postoji
+caCertExists.message=Certifikat već postoji.
+pkcs12.getpassword.title=Dijalog unosa lozinke
+pkcs12.getpassword.message=Unesite lozinku kojom je enkriptovana sigurnosna kopija ovog certifikata.
+clientAuthAsk.title=Zahtjev za identifikaciju korisnika
+clientAuthAsk.message1=Ova stranica zahtijeva od vas da se identifikujete pomoću certifikata:
+clientAuthAsk.message2=Izaberite certifikat koji ćete predstaviti kao identifikaciju:
+clientAuthAsk.message3=Detalji izabranog certifikata:
+clientAuthAsk.remember.label=Zapamti ovu odluku
+clientAuthAsk.organization=Organizacija: "%S"
+clientAuthAsk.issuer=Izdano pod: "%S"
+clientAuthAsk.viewCert.label=Prikaži
 
+certmgr.title=Detalji certifikata
 # These strings are stolen from security/manager/locales/en-US/chrome/pippki/certManager.dtd
+certmgr.subjectinfo.label=Izdano
+certmgr.issuerinfo.label=Izdao
+certmgr.periodofvalidity.label=Period valjanosti
+certmgr.fingerprints.label=Otisci
+certmgr.certdetail.cn=Uobičajeni naziv (CN)
+certmgr.certdetail.o=Organizacija (O)
+certmgr.certdetail.ou=Organizacijska jedinica (OU)
+certmgr.certdetail.serialnumber=Serijski broj
+certmgr.certdetail.sha256fingerprint=SHA-256 otisak
+certmgr.certdetail.sha1fingerprint=SHA1 otisak
+certmgr.begins=Počinje
+certmgr.expires=Ističe
