[an] update from Pootle (firefox)

--- a/an/dom/chrome/layout/HtmlForm.properties
+++ b/an/dom/chrome/layout/HtmlForm.properties
@@ -5,6 +5,8 @@
 Reset=Restablir
 Submit=Ninviar a consulta
 Browse=Examinar…
+ChooseFiles=Trigar fichers…
+ChooseDirs=Trigar una carpeta…
 FileUpload=Carga de fichers
 # LOCALIZATION NOTE (IsIndexPromptWithSpace): The last character of the string 
 # should be a space (U+0020) in most locales. The prompt is followed by an 
