--- a/an/dom/chrome/dom/dom.properties
+++ b/an/dom/chrome/dom/dom.properties
@@ -156,6 +156,7 @@ XMLDocumentLoadPrincipalMismatch=L'uso de document.load ye vedau en documentos q
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=S'ha abortau una transacción IndexedDB que no yera encara completa, debiu a la navegación d'a pachina.
 # LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+WillChangeOverBudgetIgnoredWarning=O consumo de memoria d'o will-change ye masiau alto. L'aria de superficie cubre %1$S pixels, l'asignación permitida ye l'aria de superficie d'o documento multiplicau por %2$S (%3$S pixels). Todas as ocurrencias de will-change en o documento serán ignoradas quan sobreixcan l'asignación permitida.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker".
 HittingMaxWorkersPerDomain=No s'ha puesto iniciar un ServiceWorker immediatament porque i ha belatros documentos d'o mesmo orichen que ya fan servir o numbro maximo de procesos de treballo. O ServiceWorker s'ha posau en a ringlera y s'iniciará quan belatro proceso de treballo haiga rematau.
 # LOCALIZATION NOTE: Do no translate "setVelocity", "PannerNode", "AudioListener", "speedOfSound" and "dopplerFactor"
@@ -163,8 +164,14 @@ PannerNodeDopplerWarning=L'uso de setVelocity en PannerNode y AudioListener, y s
 # LOCALIZATION NOTE: Do not translate "Worker".
 EmptyWorkerSourceWarning=Mirando de creyar un Treballador dende una fuent vueda. Isto ye probablement sin querer.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker".
+InterceptionFailed=A intercepción d'o ret ServiceWorker ha fallau por una error inasperada.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "FetchEvent.respondWith()", "opaque", or "Response".
+OpaqueInterceptionDisabled=Un ServiceWorker ha psau una respuesta opaca ta FetchEvent.respondWith() entre que a intercepción opaca ye desactivada.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "FetchEvent.respondWith()", "FetchEvent.request.type", "same-origin", "cors", "no-cors", "opaque", "Response", or "RequestMode".
+BadOpaqueInterceptionRequestMode=Un ServiceWorker ha pasau una respuesta ta FetchEvent.respondWith() entre que o FetchEvent.request.type ha estau u "mesmo-orichen" u "cors".  Os obchectos de respuesta opaca nomás son validos quan o RequestMode ye "no-cors".
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "Error", "Response", "FetchEvent.respondWith()", or "fetch()".
+InterceptedErrorResponse=Un ServiceWorker ha pasau una Respuesta d'Error ta FetchEvent.respondWith(). Isto gosa querer decir que o ServiceWorker ha feito una clamada invalida fetch().
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "Response", "FetchEvent.respondWith()", or "Response.clone()".
+InterceptedUsedResponse=Un ServiceWorker ha pasau una Respuesta ta FetchEvent.respondWith(). O cuerpo d'una Respuesta nomás se puede leyer una vegada. Use Response.clone() ta accedir ta o cuerpo multiples vegadas.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "Response", "FetchEvent.respondWith()", "FetchEvent.request", or "Worker".
+ClientRequestOpaqueInterception=Un ServiceWorker ha pasau una Respuesta opaga ta FetchEvent.respondWith() entre que FetchEvent.request yera una petición de client. Una petición de client ye por un regular una navegación con navegador u un script Worker d'alto libel.
