--- a/an/security/manager/chrome/pipnss/nsserrors.properties
+++ b/an/security/manager/chrome/pipnss/nsserrors.properties
@@ -318,3 +318,4 @@ MOZILLA_PKIX_ERROR_NOT_YET_VALID_CERTIFICATE=O servidor ha presentau un certific
 MOZILLA_PKIX_ERROR_NOT_YET_VALID_ISSUER_CERTIFICATE=En a emisión d'o certificau d'o servidor s'ha usau  un certificau que encara no ye valido.
 MOZILLA_PKIX_ERROR_SIGNATURE_ALGORITHM_MISMATCH=L'algoritmo de sinaydura d'o campo de sinyadura d'o certificau no coincide con l'algorismo d'o campo «signatureAlgorithm».
 MOZILLA_PKIX_ERROR_OCSP_RESPONSE_FOR_CERT_MISSING=A rispuesta OCSP no incluye un estau ta lo certificau que ye verificando-se.
+MOZILLA_PKIX_ERROR_VALIDITY_TOO_LONG=O servidor ha presentau un certificau que ye valido pa masiau tiempo.
