--- a/an/security/manager/chrome/pippki/pippki.properties
+++ b/an/security/manager/chrome/pippki/pippki.properties
@@ -70,6 +70,7 @@ pageInfo_Privacy_Encrypted1=A pachina que ye veyendo s'ha zifrau antes de transm
 pageInfo_Privacy_Encrypted2=O zifrau fa muit dificil que personas no autorizadas puedan veyer a información que viacha entre ordinadors. Por tanto, ye muit improbable que belún haiga leito ista pachina mientres viachaba por o ret.
 pageInfo_MixedContent=Connexión zifrada parcialment
 pageInfo_MixedContent2=I hai partes d'a pachina que ye veyendo que no estioron zifradas antes de transmitir-se por internet.
+pageInfo_WeakCipher=A conexión a iste puesto web fa servir un zifrau feble y no ye pas privada. Atras personas podría visualizar a información u modificar o comportamiento d'o puesto web.
 
 #Cert Viewer
 certDetails=Visor de certificaus:
