--- a/an/toolkit/chrome/global/devtools/gclicommands.properties
+++ b/an/toolkit/chrome/global/devtools/gclicommands.properties
@@ -284,10 +284,12 @@ restartBrowserRestarting=%1$S se ye reiniciando…
 
 # LOCALIZATION NOTE (restartBrowserGroupOptions) A label for the optional options of
 # the restart command.
+restartBrowserGroupOptions=Opcions
 
 # LOCALIZATION NOTE (restartBrowserSafemodeDesc) A very short string to
 # describe the 'safemode' parameter to the 'restart' command, which is
 # displayed in a dialog when the user is using this command.
+restartBrowserSafemodeDesc=Activa o modo seguro en reiniciar
 
 # LOCALIZATION NOTE (inspectDesc) A very short description of the 'inspect'
 # command. See inspectManual for a fuller description of what it does. This
@@ -1582,6 +1584,9 @@ securityCSPManual=Amostrar as impresions sobre o CSP aplicau a la pachina actual
 securityCSPRemWildCard=Puedes sacar o wildcard(*)?
 securityCSPPotentialXSS=Vulnerabilidat potencial de XSS!
 # LOCALIZATION NOTE: do not translate 'Content-Security-Policy'
+securityCSPNoCSPOnPage=No s'ha puesto trobar a Politica de Seguranza de Conteniu ta
+securityCSPHeaderOnPage=Politica de seguranza de conteniu pa
+securityCSPROHeaderOnPage=Content-Security-Policy-Report-Only pa
 
 # LOCALIZATION NOTE (rulersDesc) A very short description of the
 # 'rulers' command. See rulersManual for a fuller description of what
