--- a/an/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/an/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -6,6 +6,14 @@ rememberValue = Use l'administrador de claus ta recordar ista valura.
 rememberPassword = Use l'administrador de claus ta recordar ista clau.
 savePasswordTitle = Confirmar
 # LOCALIZATION NOTE (rememberLoginMsg, rememberLoginMsgNoUser): %S is brandShortName
+rememberLoginMsg = Quiere que %S s'alcuerde d'iste inicio de sesión?
+rememberLoginMsgNoUser = Quiere que %S s'alcuerde d'ista clau?
+rememberLoginButtonText = &Recordar-la
+rememberLoginButtonAccessKey = R
+updateLoginMsg = Quiere esviellar iste inicio de sesión?
+updateLoginMsgNoUser = Quiere esviellar a clau alzada?
+updateLoginButtonText = Actualización:
+updateLoginButtonAccessKey = U
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname. 
 # Note that long usernames may be truncated.
@@ -15,6 +23,7 @@ rememberPasswordMsg = Quiere recordar a clau de «%1$S» en %2$S?
 rememberPasswordMsgNoUsername = Quiere recordar a clau d'o puesto %S?
 # LOCALIZATION NOTE (noUsernamePlaceholder):
 # This is displayed in place of the username when it is missing.
+noUsernamePlaceholder=Garra nombre d'usuario
 # LOCALIZATION NOTE (showPasswordPlaceholder):
 # This is displayed in the password field to indicate that the password will be
 # shown if focused.
@@ -27,12 +36,14 @@ notifyBarNeverRememberButtonText = No recordar nunca a clau d'iste puesto
 notifyBarNeverRememberButtonAccessKey = N
 rememberButtonText = &Recordar-la
 notifyBarRememberPasswordButtonText = Recordar clau
+notifyBarRememberPasswordButtonAccessKey = R
 passwordChangeTitle = Confirmar o cambeo de clau
 # LOCALIZATION NOTE (updatePasswordMsg):
 # String is the username for the login.
 updatePasswordMsg = Quiere actualizar a clau alzada de l'usuario «%S»?
 updatePasswordMsgNoUser = Quiere actualizar a clau alzada?
 notifyBarUpdateButtonText = Esviellar a clau
+notifyBarUpdateButtonAccessKey = U
 notifyBarDontChangeButtonText = No cambiar-la
 notifyBarDontChangeButtonAccessKey = N
 userSelectText = Por favor, confirme ta qué usuario ye cambiando a clau
@@ -43,6 +54,8 @@ showPasswordsAccessKey=A
 noMasterPasswordPrompt=Ye seguro que quiere amostrar as suyas claus?
 removeAllPasswordsPrompt=Ye seguro que quiere eliminar todas as claus?
 removeAllPasswordsTitle=Eliminar todas as claus
+removeLoginPrompt=Ye seguro que quiere eliminar iste inicio de sesión?
+removeLoginTitle=Eliminar inicio de sesión
 loginsSpielAll=En o suyo ordinador i hai claus alzadas ta los siguients puestos web:
 loginsSpielFiltered=As siguients claus coinciden con a suya busca:
 # LOCALIZATION NOTE (loginHostAge):
@@ -51,3 +64,6 @@ loginsSpielFiltered=As siguients claus coinciden con a suya busca:
 loginHostAge=%1$S (%2$S)
 # LOCALIZATION NOTE (noUsername):
 # String is used on the context menu when a login doesn't have a username.
+noUsername=Garra nombre d'usuario
+duplicateLoginTitle=O inicio de sesión ya existe
+duplicateLogin=Ya existe un inicio de sesión duplicau
