[an] update from Pootle (firefox)

--- a/an/browser/chrome/browser/browser.properties
+++ b/an/browser/chrome/browser/browser.properties
@@ -331,9 +331,15 @@ identity.identified.state_and_country=%S, %S
 
 identity.unknown.tooltip=Iste puesto web no proporciona garra información d'identidat.
 
+trackingProtection.intro.title=Como funciona a protección contra o seguimiento
 # LOCALIZATION NOTE (trackingProtection.intro.description): %S is brandShortName
+trackingProtection.intro.description=Quan o escudo ye visible, quiere decir que Firefox ye blocando activament o conteniu que li fa o seguimiento.
 # LOCALIZATION NOTE (trackingProtection.intro.step1of3): Indicates that the intro panel is step one of three in a tour.
+trackingProtection.intro.step1of3=1 de 3
+trackingProtection.intro.nextButton.label=Siguient
 
+trackingProtection.icon.activeTooltip=S'ha blocau intentos de seguimiento
+trackingProtection.icon.disabledTooltip=S'ha detectau conteniu que fa seguimiento
 
 # Edit Bookmark UI
 editBookmarkPanel.pageBookmarkedTitle=Pachina adhibida a marcapachinas
@@ -552,7 +558,10 @@ getUserMedia.shareCamera.message = Le fería goyo de compartir a suya camara con
 getUserMedia.shareMicrophone.message = Le fería goyo de compartir o suyo microfono con %S?
 getUserMedia.shareScreen.message = Quiere compartir a suya pantalla con %S?
 getUserMedia.shareCameraAndMicrophone.message = Le fería goyo de compartir a suya camara y o suyo microfono con %S?
+getUserMedia.shareCameraAndAudioCapture.message = Li fería goyo de compartir a suya camera y l'audio d'ista pestanya con %S?
 getUserMedia.shareScreenAndMicrophone.message = Querría compartir o suyo microfono y pantalla con %S?
+getUserMedia.shareScreenAndAudioCapture.message = Li fería goyo de compartir l'audio d'ista pestanya y a suya pantalla con %S?
+getUserMedia.shareAudioCapture.message = Li fería goyo de compartir l'audio d'ista pestanya %S?
 getUserMedia.selectWindow.label=Finestra a compartir:
 getUserMedia.selectWindow.accesskey=F
 getUserMedia.selectScreen.label=Pantalla a compartir:
@@ -594,6 +603,7 @@ getUserMedia.sharingApplication.message = Agora ye compartindo una aplicación c
 getUserMedia.sharingScreen.message = Ye compartindo a suya pantalla con ista pachina.
 getUserMedia.sharingWindow.message = Ye compartindo una finestra con ista pachina.
 getUserMedia.sharingBrowser.message = Ye compartindo una pestanya con ista pachina.
+getUserMedia.sharingAudioCapture.message = Ye compartindo l'audio d'una pestanya con ista pachina.
 getUserMedia.continueSharing.label = Continar compartindo
 getUserMedia.continueSharing.accesskey = C
 getUserMedia.stopSharing.label = Deixar de compartir
@@ -633,6 +643,7 @@ getUserMedia.sharingMenu.accesskey = d
 # %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.sharingMenuCamera = %S (camara)
 getUserMedia.sharingMenuMicrophone = %S (microfono)
+getUserMedia.sharingMenuAudioCapture = %S (audio d'a pestanya)
 getUserMedia.sharingMenuApplication = %S (aplicación)
 getUserMedia.sharingMenuScreen = %S (pantalla)
 getUserMedia.sharingMenuWindow = %S (finestra)
@@ -642,6 +653,11 @@ getUserMedia.sharingMenuCameraMicrophoneApplication = %S (camara, microfono y ap
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (camara, microfono y pantalla)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (camara, microfono y finestra)
 getUserMedia.sharingMenuCameraMicrophoneBrowser = %S (camara, microfono y pestanya)
+getUserMedia.sharingMenuCameraAudioCapture = %S (camera y audio d'a pestanya)
+getUserMedia.sharingMenuCameraAudioCaptureApplication = %S (camera, audio d'a pestanya y aplicación)
+getUserMedia.sharingMenuCameraAudioCaptureScreen = %S (camera, audio d'a pestanya y pantalla)
+getUserMedia.sharingMenuCameraAudioCaptureWindow = %S (camera, audio d'a pestanya y finestra)
+getUserMedia.sharingMenuCameraAudioCaptureBrowser = %S (camera, audio d'a pestanya y pestanya)
 getUserMedia.sharingMenuCameraApplication = %S (camara y aplicación)
 getUserMedia.sharingMenuCameraScreen = %S (camara y pantalla)
 getUserMedia.sharingMenuCameraWindow = %S (camara y finestra)
@@ -650,6 +666,10 @@ getUserMedia.sharingMenuMicrophoneApplication = %S (microfono y aplicación)
 getUserMedia.sharingMenuMicrophoneScreen = %S (microphone y pantalla)
 getUserMedia.sharingMenuMicrophoneWindow = %S (microfono y finestra)
 getUserMedia.sharingMenuMicrophoneBrowser = %S (microfono y pestanya)
+getUserMedia.sharingMenuAudioCaptureApplication = %S (audio d'a pestanya y aplicación)
+getUserMedia.sharingMenuAudioCaptureScreen = %S (audio d'a pestanya y pantalla)
+getUserMedia.sharingMenuAudioCaptureWindow = %S (audio d'a pestanya y finestra)
+getUserMedia.sharingMenuAudioCaptureBrowser = %S (audio d'a pestanya y pestanya)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
 getUserMedia.sharingMenuUnknownHost = Orichen desconoixiu
