--- a/an/browser/chrome/browser/newTab.properties
+++ b/an/browser/chrome/browser/newTab.properties
@@ -34,9 +34,11 @@ newtab.suggested.explain=Iste puesto te lo recomienda Mozilla. Puetz eliminar-lo
 # the gear icon used to customize the new tab window. %2$S will be replaced by
 # an active link using string newtab.learn.link as text.
 newtab.enhanced.explain=Un partner de Mozilla ha amillorau iste mosaico visualment, substituyendo o pantallazo. Puetz amortar os mosaicos amilloraus cambiando as preferencias, fendo clic en %1$S. %2$S
+newtab.intro1.paragraph1=Agora quan ubra una Nueva Pestanya, tamién veyerá puestos que pensamos que puedan estar interesants ta vusté. Beluns son sucherius por Moziilla u patrocinaus por beluno d'os nuestros socios.
 # LOCALIZATION NOTE(newtab.intro1.paragraph2): %1$S will be replaced inline by
 # an active link using string newtab.privacy.link as text. %2$S will be replaced
 # inline by the gear icon used to customize the new tab window.
+newtab.intro1.paragraph2=Pa dar iste servicio, bells datos se ninvian automaticament d'alcuerdo con o nuestro %1$S. Puet desactivar isto desmarcando a opción baixo o icono d'o motor (%2$S).
 newtab.learn.link=Saber-ne mas…
 newtab.privacy.link=Nota de privacidat
 newtab.learn.link2=Mas sobre Nueva Pestanya
