[an] update from Pootle (firefox)

--- a/an/browser/chrome/browser/devtools/markers.properties
+++ b/an/browser/chrome/browser/devtools/markers.properties
@@ -23,12 +23,21 @@ marker.label.parseXML=Parse XML
 marker.label.domevent=Evento DOM
 marker.label.consoleTime=Consola
 marker.label.garbageCollection=Contexto grafico (GC) incremental
+marker.label.garbageCollection.nonIncremental=Contexto grafico (GC) no incremental
+marker.label.cycleCollection=Replega de ciclo
+marker.label.cycleCollection.forgetSkippable=Reducción de grafico CC
 marker.label.timestamp=Marca de tiempo
 marker.label.unknown=Desconoixiu
 
 # LOCALIZATION NOTE (marker.label.javascript.*):
 # These strings are displayed as JavaScript markers that have special
 # reasons that can be translated.
+marker.label.javascript.scriptElement=Etiqueta de script
+marker.label.javascript.promiseCallback=Promise Callback
+marker.label.javascript.promiseInit=Promise Init
+marker.label.javascript.workerRunnable=Worker
+marker.label.javascript.jsURI=JavaScript URI
+marker.label.javascript.eventHandler=Maniador d'eventos
 
 # LOCALIZATION NOTE (marker.fieldFormat):
 # Some timeline markers come with details, like a size, a name, a js function.
@@ -56,6 +65,7 @@ marker.field.consoleTimerName=Nombre d'o cronometro:
 marker.field.DOMEventType=Tipo d'evento:
 marker.field.DOMEventPhase=Fase:
 # Non-incremental cause for a Garbage Collection marker
+marker.field.nonIncrementalCause=Causa no incremental:
 # For "Recalculate Style" markers
 # General "reason" for a marker (JavaScript, Garbage Collection)
 marker.field.causeName=Causa:
