--- a/an/browser/chrome/browser/loop/loop.properties
+++ b/an/browser/chrome/browser/loop/loop.properties
@@ -55,11 +55,15 @@ problem_accessing_account=I ha habiu bell problema en accedir ta la suya cuenta
 ## the appropriate action.
 retry_button=Tornar a prebar
 
+share_email_subject6=Une-te a una conversa de video
 ## LOCALIZATION NOTE (share_email_body6): In this item, don't translate the
 ## part between {{..}} and leave the \n\n part alone
+share_email_body6=Fe clic a o vinclo d'o Firefox Hello pa connectar-te agora mesmo a la conversa: {{callUrl}}
 ## LOCALIZATION NOTE (share_email_body_context2): In this item, don't translate
 ## the part between {{..}} and leave the \n\n part alone.
+share_email_body_context2=Une-te a una conversa de video. Fe clic en o vinclo d'o Firefox Hell pa connectar-te-ie agora mesmo: {{callUrl}}\n\nEn a conversa charraremos d'iste tema: {{title}}
 ## LOCALIZATION NOTE (share_email_footer): Common footer content for both email types
+share_email_footer=\n\n________\nUne-te a conversas y creya-ne de nuevas gratuitament con o Firefox Hello. Connecta-te facilment por video con qualsequier persona y dende qualsequier puesto. Sin necesidat de rechistrar-se ni baixar cosa. Mas información en http://www.firefox.com/hello
 ## LOCALIZATION NOTE (share_tweeet): In this item, don't translate the part
 ## between {{..}}. Please keep the text below 117 characters to make sure it fits
 ## in a tweet.
@@ -126,8 +130,10 @@ import_contacts_success_message=S'ha importau {{total}} contacto correctament.;S
 sync_contacts_button=Sincronizar os contactos
 ## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
 ## contacts in his address book
+no_contacts_message_heading=No i ha encara garra contacto
 ## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
 ## to add people to his contact list
+no_contacts_import_or_add=Importar u adhibir belún
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -140,6 +146,7 @@ import_failed_support_button=Aduya
 remove_contact_menu_button2=Borrar contacto...
 ## LOCALIZATION NOTE(remove_contact_title): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
+remove_contact_menu_button3=Borrar contacto
 ## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
 ## to confirm deletion of a contact.
 confirm_delete_contact_alert=Ye seguro que quiere borrar iste contacto?
@@ -148,6 +155,7 @@ confirm_delete_contact_alert=Ye seguro que quiere borrar iste contacto?
 confirm_delete_contact_cancel_button=Cancelar
 ## LOCALIZATION NOTE(contact_list_title): This is in uppercase in English for
 ## emphasis, please do what is appropriate for specific locales.
+contact_list_title=OS MÍOS CONTACTOS
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
@@ -208,6 +216,7 @@ active_screenshare_button_title=&Deixar de compartir
 inactive_screenshare_button_title=Compartir a tuya pantalla
 share_tabs_button_title2=Compartir as suyas Pestanyas
 share_windows_button_title=Compartir otras Finestras
+self_view_hidden_message=O suyo video ye amagau pero encara se ye ninviando; redimensione la finestra pa veyer-lo
 
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
