--- a/an/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/an/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,6 +99,7 @@ loop-call-button3.label = Ola!
 loop-call-button3.tooltiptext = Empecipiar una conversa
 # LOCALIZATION NOTE(loop-call-button3-pb.tooltiptext): Shown when the button is
 # placed inside a Private Browsing window. %S is the value of loop-call-button3.label.
+loop-call-button3-pb.tooltiptext = %S no ye disponible en Navegación Privada
 
 social-share-button.label = Compartir ista pachina
 social-share-button.tooltiptext = Compartir ista pachina
