--- a/an/browser/chrome/browser/devtools/markers.properties
+++ b/an/browser/chrome/browser/devtools/markers.properties
@@ -67,6 +67,7 @@ marker.field.DOMEventPhase=Fase:
 # Non-incremental cause for a Garbage Collection marker
 marker.field.nonIncrementalCause=Causa no incremental:
 # For "Recalculate Style" markers
+marker.field.restyleHint=Consello de reestilo:
 # General "reason" for a marker (JavaScript, Garbage Collection)
 marker.field.causeName=Causa:
 # General "type" for a marker (Cycle Collection, Garbage Collection)
@@ -80,6 +81,43 @@ marker.value.DOMEventBubblingPhase=Bambolleyo
 
 # LOCALIZATION NOTE (marker.gcreason.label.*):
 # These strings are used to give a concise but readable description of a GC reason.
+marker.gcreason.label.API=Clamada API
+marker.gcreason.label.DESTROY_RUNTIME=Amortar
+marker.gcreason.label.DESTROY_CONTEXT=Amortar
+marker.gcreason.label.LAST_DITCH=Sin memoria
+marker.gcreason.label.TOO_MUCH_MALLOC=Masiaus bytes asignaus
+marker.gcreason.label.ALLOC_TRIGGER=Masiadas asignacions
+marker.gcreason.label.DEBUG_GC=Depurar GC
+marker.gcreason.label.COMPARTMENT_REVIVED=Dead Global Revived
+marker.gcreason.label.RESET=Rematar ciclo incremental
+marker.gcreason.label.OUT_OF_NURSERY=A guardería ye plena
+marker.gcreason.label.EVICT_NURSERY=Desfiuzamiento d'a guardería
+marker.gcreason.label.FULL_STORE_BUFFER=Obchectos d'a guardería masiau activos
+marker.gcreason.label.SHARED_MEMORY_LIMIT=Ha fallau l'asignación gran\u0020
+marker.gcreason.label.PERIODIC_FULL_GC=GC plena periodica
+marker.gcreason.label.INCREMENTAL_TOO_SLOW=A taxa d'asignación ye masiau rapida
+marker.gcreason.label.COMPONENT_UTILS=Cu.forceGC
+marker.gcreason.label.MEM_PRESSURE=Memoria baixa
+marker.gcreason.label.CC_WAITING=Forzada por Cycle Collection
+marker.gcreason.label.CC_FORCED=Forzada por Cycle Collection\u0020
+marker.gcreason.label.LOAD_END=Carga de pachina rematada
+marker.gcreason.label.PAGE_HIDE=Moviu ta o fundo
+marker.gcreason.label.NSJSCONTEXT_DESTROY=Destruyir o Contexto JS
+marker.gcreason.label.SET_NEW_DOCUMENT=Nuevo documento
+marker.gcreason.label.SET_DOC_SHELL=Nuevo documento
+marker.gcreason.label.DOM_UTILS=Clamada API
+marker.gcreason.label.DOM_IPC=IPC
+marker.gcreason.label.DOM_WORKER=Periodic Worker GC
+marker.gcreason.label.INTER_SLICE_GC=Tallada incremental periodica GC
+marker.gcreason.label.FULL_GC_TIMER=GC plena periodica
+marker.gcreason.label.SHUTDOWN_CC=Amortar
+marker.gcreason.label.FINISH_LARGE_EVALUATE=Eval larga
+marker.gcreason.label.DOM_WINDOW_UTILS=Usuario inactivo
+marker.gcreason.label.USER_INACTIVE=Usuario inactivo
 
 # LOCALIZATION NOTE (marker.gcreason.description.*):
 # These strings are used to give an expanded description of why a GC occurred.
+marker.gcreason.description.API=I ha habiu una clamada ta una API pa forzar a replega de vasuera.
+marker.gcreason.description.EAGER_ALLOC_TRIGGER=JavaScript ha tornau ta o bucle d'evento y i heba prous bytes asignaus dende a zaguera GC que s'ha disparau un nuevo ciclo de GC.
+marker.gcreason.description.DESTROY_RUNTIME=Firefox ha destruyiu un JavaScript de tiempo real u contexto, y iste ha estau a replega de vasuera final antes d'amortar.
+marker.gcreason.description.DESTROY_CONTEXT=Firefox ha destruyiu un JavaScript de tiempo real u contexto, y iste ha estau a replega de vasuera final antes d'amortar.
