--- a/an/browser/chrome/browser/devtools/performance.properties
+++ b/an/browser/chrome/browser/devtools/performance.properties
@@ -13,6 +13,7 @@
 # LOCALIZATION NOTE (performance.label):
 # This string is displayed in the title of the tab when the profiler is
 # displayed inside the developer tools window and in the Developer Tools Menu.
+performance.label=Rendimiento
 
 # LOCALIZATION NOTE (performance.panelLabel):
 # This is used as the label for the toolbox panel.
@@ -21,11 +22,13 @@ performance.panelLabel=Panel de rendimiento
 # LOCALIZATION NOTE (performance.commandkey, performance.accesskey)
 # Used for the menuitem in the tool menu
 performance.commandkey=VK_F5
+performance.accesskey=R
 
 # LOCALIZATION NOTE (performance.tooltip):
 # This string is displayed in the tooltip of the tab when the profiler is
 # displayed inside the developer tools window.
 # Keyboard shortcut for Performance Tools will be shown inside brackets.
+performance.tooltip=Rendimiento (%S)
 
 # LOCALIZATION NOTE (noRecordingsText): The text to display in the
 # recordings menu when there are no recorded profiles yet.
@@ -50,6 +53,7 @@ recordingsList.loadingLabel=Se ye cargando…
 # LOCALIZATION NOTE (recordingsList.durationLabel):
 # This string is displayed in the recordings list of the Performance Tools,
 # for an item that has finished recording.
+recordingsList.durationLabel=%S ms
 
 # LOCALIZATION NOTE (recordingsList.saveLabel):
 # This string is displayed in the recordings list of the Performance Tools,
@@ -66,6 +70,7 @@ graphs.fps=fps
 # This string is displayed in the flamegraph of the Performance Tools,
 # as the unit used to measure time (in milliseconds). This label should be kept
 # AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.ms=ms
 
 # LOCALIZATION NOTE (graphs.memory):
 # This string is displayed in the memory graph of the Performance tool,
@@ -81,15 +86,19 @@ category.other=Gecko
 category.css=Estilos
 category.js=JIT
 category.gc=GC
+category.network=Ret
 category.graphics=Graficos
+category.storage=Almagazenache
 category.events=Dentrada & eventos
 category.tools=Ferramientas
 
 # LOCALIZATION NOTE (table.ms):
 # This string is displayed in the call tree after units of time in milliseconds.
+table.ms=ms
 
 # LOCALIZATION NOTE (table.percentage):
 # This string is displayed in the call tree after units representing percentages.
+table.percentage=%
 
 # LOCALIZATION NOTE (table.root):
 # This string is displayed in the call tree for the root node.
@@ -116,9 +125,11 @@ table.view-optimizations.tooltiptext=Veyer optimizacions en a vista JIT
 
 # LOCALIZATION NOTE (recordingsList.importDialogTitle):
 # This string is displayed as a title for importing a recoring from disk.
+recordingsList.importDialogTitle=Importar rechistro…
 
 # LOCALIZATION NOTE (recordingsList.saveDialogTitle):
 # This string is displayed as a title for saving a recording to disk.
+recordingsList.saveDialogTitle=Alzar rechistro…
 
 # LOCALIZATION NOTE (recordingsList.saveDialogJSONFilter):
 # This string is displayed as a filter for saving a recording to disk.
@@ -147,6 +158,7 @@ jit.empty=No i hai garra optimización JIT gravada por iste quadro.
 # LOCALIZATION NOTE (timeline.tick):
 # This string is displayed in the timeline overview, for delimiting ticks
 # by time, in milliseconds.
+timeline.tick=%S ms
 
 # LOCALIZATION NOTE (timeline.records):
 # This string is displayed in the timeline waterfall, as a title for the menu.
@@ -158,3 +170,4 @@ timeline.records=RECHISTROS
 # %S is the percentage of the buffer used -- there are two "%"s after to escape
 # the % that is actually displayed.
 # Example: "Buffer 54% full"
+profiler.bufferFull=Buffer %S%% pleno
