--- a/an/browser/chrome/browser/loop/loop.properties
+++ b/an/browser/chrome/browser/loop/loop.properties
@@ -152,6 +152,7 @@ remove_contact_menu_button3=Borrar contacto
 confirm_delete_contact_alert=Ye seguro que quiere borrar iste contacto?
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Borrar contacto
 confirm_delete_contact_cancel_button=Cancelar
 ## LOCALIZATION NOTE(contact_list_title): This is in uppercase in English for
 ## emphasis, please do what is appropriate for specific locales.
