--- a/an/dom/chrome/security/security.properties
+++ b/an/dom/chrome/security/security.properties
@@ -17,8 +17,30 @@ CORSInvalidAllowHeader=Petición d'orichen cruzau blocada: A politica d'o "Mesmo
 CORSMissingAllowHeaderFromPreflight=Petición d'orichen cruzau blocada: A politica d'o "Mesmo Orichen" no deixa leyer o recurso remoto en %1$S. (Razón: falta o teste '%2$S' en o capitero de CORS 'Access-Control-Allow-Headers' d'a canal CORS preflight).
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security", "HSTS", "max-age" or "includeSubDomains"
+STSUnknownError=Strict-Transport-Security: Ha ocurriu una error en procesar o capitero especificado por o puesto.
+STSUntrustworthyConnection=Strict-Transport-Security: A connexión ta o puesto no ye fiable, asinas que s'ha ignorau o capitero.
+STSCouldNotParseHeader=Strict-Transport-Security: O puesto ha especificau un capitero que podría no estar correctament parsiau.
+STSNoMaxAge=Strict-Transport-Security: O puesto ha especificau un capitero que no inclui una directiva'max-age'.
+STSMultipleMaxAges=Strict-Transport-Security: O puesto ha especificau un capitero que incluyiba multiples directivas 'max-age'.
+STSInvalidMaxAge=Strict-Transport-Security: O puesto ha especificau un capitero que incluyiba una directiva invalida 'max-age'.
+STSMultipleIncludeSubdomains=Strict-Transport-Security: O puesto ha especificau un capitero que incluyiba multiples directivas 'includeSubDomains'.
+STSInvalidIncludeSubdomains=Strict-Transport-Security: O puesto ha especificau un capitero que incluyiba una directiva invalida 'includeSubDomains'.
+STSCouldNotSaveState=Strict-Transport-Security: Ha ocurriu una error en anotar o puesto como un host Strict-Transport-Security.
 
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age" or "includeSubDomains"
+PKPUnknownError=Public-Key-Pins: Ha ocurriu una error desconoixida especificada por o puesto.
+PKPUntrustworthyConnection=Public-Key-Pins: A connexión ta o puesto no ye fiable, asinas que s'ha ignorau o capitero especificau.
+PKPCouldNotParseHeader=Public-Key-Pins: O puesto ha especificau un capitero que no s'ha puesto parsiar con exito.
+PKPNoMaxAge=Public-Key-Pins: O puesto ha especificau un capitero que no inclui una directiva 'max-age'.
+PKPMultipleMaxAges=Public-Key-Pins: O puesto ha especificau un capitero que incluyiba multiples directivas 'max-age'.
+PKPInvalidMaxAge=Public-Key-Pins: O puesto ha especificau un capitero que incluyiba una directiva invalida 'max-age'.
+PKPMultipleIncludeSubdomains=Public-Key-Pins: O puesto ha especificau un capitero que incluyiba multples directivas 'includeSubDomains'.
+PKPInvalidIncludeSubdomains=Public-Key-Pins: O puesto ha especificau un capitero que incluyiba una directiva invalida 'includeSubDomains'.
+PKPInvalidPin=Public-Key-Pins: O puesto ha especificau un capitero que incluyiba un pin invalido.
+PKPMultipleReportURIs=Public-Key-Pins: O puesto ha especificau un capitero que inlcuyiba multiples directivas 'report-uri'.
+PKPPinsetDoesNotMatch=Public-Key-Pins: O puesto ha especificau un capitero que no incluyiba un matching pin.
+PKPNoBackupPin=Public-Key-Pins: O puesto ha especificau un capitero que no inclui un backup pin.
+PKPCouldNotSaveState=Public-Key-Pins: Ha ocurriu una error en anotar o puesto como un host Public-Key-Pins host.
 
 # LOCALIZATION NOTE: Do not translate "SHA-1"
 SHA1Sig=Iste puesto fa servir un Certificau SHA-1; se recomienda que faiga servir certificaus con algoritmos de sinyatura que empleguen funcions hash mas fuertes que SHA-1.
