--- a/an/browser/chrome/browser/devtools/markers.properties
+++ b/an/browser/chrome/browser/devtools/markers.properties
@@ -82,6 +82,7 @@ marker.value.DOMEventBubblingPhase=Bambolleyo
 # LOCALIZATION NOTE (marker.gcreason.label.*):
 # These strings are used to give a concise but readable description of a GC reason.
 marker.gcreason.label.API=Clamada API
+marker.gcreason.label.EAGER_ALLOC_TRIGGER=Disparo d'asignación impacient
 marker.gcreason.label.DESTROY_RUNTIME=Amortar
 marker.gcreason.label.DESTROY_CONTEXT=Amortar
 marker.gcreason.label.LAST_DITCH=Sin memoria
@@ -121,3 +122,33 @@ marker.gcreason.description.API=I ha habiu una clamada ta una API pa forzar a re
 marker.gcreason.description.EAGER_ALLOC_TRIGGER=JavaScript ha tornau ta o bucle d'evento y i heba prous bytes asignaus dende a zaguera GC que s'ha disparau un nuevo ciclo de GC.
 marker.gcreason.description.DESTROY_RUNTIME=Firefox ha destruyiu un JavaScript de tiempo real u contexto, y iste ha estau a replega de vasuera final antes d'amortar.
 marker.gcreason.description.DESTROY_CONTEXT=Firefox ha destruyiu un JavaScript de tiempo real u contexto, y iste ha estau a replega de vasuera final antes d'amortar.
+marker.gcreason.description.LAST_DITCH=JavaScript ha mirau d'asignar, pero no i heba memoria disponible. Fendo una replega de vasuera full compacting pa mirar de liberar memoria pa l'asignación.
+marker.gcreason.description.TOO_MUCH_MALLOC=JavaScript ha asignau masiaus bytes, y ha forzau a replega de vasuera.
+marker.gcreason.description.ALLOC_TRIGGER=JavaScript ha asignau masiadas vegadas, y ha forzau a replega de vasuera.
+marker.gcreason.description.DEBUG_GC=GC debida a os achustes de depuración Zeal
+marker.gcreason.description.COMPARTMENT_REVIVED=Un obchecto global que se pensaba muerto a lo inicio d'o ciclo GC ha reviviu a la fin d'o ciclo GC.
+marker.gcreason.description.RESET=O ciclo GC incremental activo s'ha aforzau a acabar de camín.
+marker.gcreason.description.OUT_OF_NURSERY=JavaScript ha asignau tantos nuevos obchectos en a guardería que s'ha empliu y ha disparau un GC menor.
+marker.gcreason.description.EVICT_NURSERY=S'amenista treballo pa fer-se en a pila tenured, requiriendo-se que a guardería siga vueda.
+marker.gcreason.description.FULL_STORE_BUFFER=I heba masiadas propiedatz en obchectos con tenure que teneban como valura un obchecto d'a guardería.
+marker.gcreason.description.SHARED_MEMORY_LIMIT=S'ha demandau una gran asignación, pero no i hai prou memoria.
+marker.gcreason.description.PERIODIC_FULL_GC=JavaScript ha tornau ta o bucle d'evento, y ha pasau un tiempo relativament largo dende que Firefox ha feito a replega de vasuera.
+marker.gcreason.description.INCREMENTAL_TOO_SLOW=Un replega de vasuera completa y no incremental s'ha disparau porque i heba una taxa  d'asignacions mas alta d'as que puede limpiar o ciclo de replega de vasuera incremental existent.
+marker.gcreason.description.COMPONENT_UTILS=S'ha clamau a Components.utils.forceGC() pa aforzar una replega de vasuera.
+marker.gcreason.description.MEM_PRESSURE=I heba muit poca memoria disponible.
+marker.gcreason.description.CC_WAITING=O replegador de ciclos ha requiesto una replega de vasuera.
+marker.gcreason.description.CC_FORCED=O replegador de ciclos ha requiesto una replega de vasuera.
+marker.gcreason.description.LOAD_END=S'ha rematau de cargar o documento.
+marker.gcreason.description.PAGE_HIDE=A pestanya u finestra s'ha moviu ta o fondo.
+marker.gcreason.description.NSJSCONTEXT_DESTROY=Firefox ha destruyiu un JavaScript de tiempo real u contexto, y iste ha estau a replega de vasuera final antes d'amortar.
+marker.gcreason.description.SET_NEW_DOCUMENT=A pachina s'ha navegau enta un nuevo documento.
+marker.gcreason.description.SET_DOC_SHELL=A pachina s'ha navegau enta un nuevo documento.
+marker.gcreason.description.DOM_UTILS=I ha habiu una clamada ta una API pa forzar a replega de vasuera.
+marker.gcreason.description.DOM_IPC=S'ha recibiu un mensache inter-procesos que demandaba una replega de vasuera.
+marker.gcreason.description.DOM_WORKER=O worker ha estau quedo por un tiempo relativament largo.
+marker.gcreason.description.INTER_SLICE_GC=Ha pasau un tiempo relativament largo dende a zaguera tallada de GC incremental.
+marker.gcreason.description.FULL_GC_TIMER=JavaScript ha tornau ta o bucle d'evento, y ha pasau un tiempo relativament largo dende que hemos feito a zaguera replega de vasuera.
+marker.gcreason.description.SHUTDOWN_CC=Firefox ha destruyiu un JavaScript de tiempo real u contexto, y iste ha estau a replega de vasuera final antes d'amortar.
+marker.gcreason.description.FINISH_LARGE_EVALUATE=Firefox ha rematau d'evaluar un script largo, y ha feito una GC porque o script no tornará a executar-se.
+marker.gcreason.description.DOM_WINDOW_UTILS=O usuario ha estau inactivo por bell tiempo. S'ha feito una GC quan yera mas dificil que se notase.
+marker.gcreason.description.USER_INACTIVE=O usuario ha estau inactivo por bell tiempo. Firefox ha aproveitar pa fer una GC quan menos s'iba a notar.
