[an] update from Pootle (mobile)

--- a/an/mobile/android/chrome/browser.properties
+++ b/an/mobile/android/chrome/browser.properties
@@ -319,20 +319,26 @@ masterPassword.incorrect=Clau incorrecta
 remoteIncomingPromptTitle=Connexión dentrant
 # LOCALIZATION NOTE (remoteIncomingPromptUSB): The message displayed on the
 # dialog that prompts the user to allow an incoming USB connection.
+remoteIncomingPromptUSB=Permitir una connexión de depuración USB?
 # LOCALIZATION NOTE (remoteIncomingPromptUSB): The message displayed on the
 # dialog that prompts the user to allow an incoming TCP connection.
+remoteIncomingPromptTCP=Permitir una connexión de depuración remota dende %1$S:%2$S? Ista connexión requiere escaniar un codigo QR pa autenticar o certificado de dispositivo remoto. Puetz privar scaneyos futuros fendo remerar o dispositivo.
 # LOCALIZATION NOTE (remoteIncomingPromptDeny): This button will deny an
 # an incoming remote debugger connection.
+remoteIncomingPromptDeny=Refusar
 # LOCALIZATION NOTE (remoteIncomingPromptAllow): This button will allow an
 # an incoming remote debugger connection.
+remoteIncomingPromptAllow=Permitir
 # LOCALIZATION NOTE (remoteIncomingPromptScan): This button will start a QR
 # code scanner to authenticate an incoming remote debugger connection.  The
 # connection will be allowed assuming the scan succeeds.
+remoteIncomingPromptScan=Escaniar
 # LOCALIZATION NOTE (remoteIncomingPromptScanAndRemember): This button will
 # start a QR code scanner to authenticate an incoming remote debugger
 # connection.  The connection will be allowed assuming the scan succeeds, and
 # the other endpoint's certificate will be saved to skip future scans for this
 # client.
+remoteIncomingPromptScanAndRemember=Escaniar y alcordar-se-ne
 
 # LOCALIZATION NOTE (remoteNotificationTitle): %S is the name of the app.
 remoteNotificationTitle=Debug de %S activau
@@ -391,6 +397,7 @@ readerMode.toolbarTip=Toca a pantalla pa amostrar opcions a os clients.
 
 #Open in App
 openInApp.pageAction = Ubrir en l'aplicación
+openInApp.ok = Acceptar
 openInApp.cancel = Cancelar
 
 #Tab sharing
