[son] update from Pootle (firefox)

--- a/son/browser/chrome/browser/devtools/debugger.properties
+++ b/son/browser/chrome/browser/devtools/debugger.properties
@@ -325,4 +325,4 @@ variablesViewOptimizedOut=(goy šifante)
 variablesViewUninitialized=(mana šilbay)
 variablesViewMissingArgs=(ši bara)
 
-anonymousSourcesLabel=Aššiley šii nda maa
+anonymousSourcesLabel=Aššiley kaŋ ši nda maa
