--- a/son/dom/chrome/accessibility/mac/accessible.properties
+++ b/son/dom/chrome/accessibility/mac/accessible.properties
@@ -28,6 +28,7 @@ definition =    bayrandiyan
 # The Role Description for an input type="search" text field
 searchTextField = ceeci hantum faari
 # The Role Description for WAI-ARIA Landmarks
+application =   porogaram
 search  =       ceeci
 banner  =       deeji-zaara
 navigation =    naaruyan
@@ -36,6 +37,16 @@ content =       gundekuna
 main    =       boŋ
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      yaamar
+alertDialog =      yaamar willandiyan
+article     =      hantum
 document    =      takadda
+log         =      zaaritiira
+marquee     =      tenda
+math        =      kabu
 note        =      laasaabay
+region      =      ganda
+status      =      porogaram assariya
+timer       =      waatidiikaw
+tooltip     =      goyjinay yaamar
 separator    =      fayari
+tabPanel     =      nor loku fasaldoo
