--- a/son/dom/chrome/dom/dom.properties
+++ b/son/dom/chrome/dom/dom.properties
@@ -157,7 +157,7 @@ XMLDocumentLoadPrincipalMismatch=Goyyan nda document.load ši koy nda takaddawey
 IndexedDBTransactionAbortNavigation=IndexedDB sanbaray foo kaŋ mana hin ka toonandi jina n' ka kay moo naaruyan sabbu se.
 # LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker".
-HittingMaxWorkersPerDomain=ServiceWorker foo mana hin ka tun, zaa haa kaŋ se, goyey hinnaa kaŋ a ga hin k’i zaa, timme. Sohõda, ServiceWorkeroo tunyanoo goo ma batu hala goyey kaŋ g’a boŋ hinnaa ma timme.
+HittingMaxWorkersPerDomain=ServiceWorker foo mana hin ka tun, zaa haa kaŋ se, goyey hinnaa kaŋ a ga hin k’i zaa, timme. Sohõda, ServiceWorker tunyanoo goo ma batu hala goyey kaŋ g’a boŋ hinnaa ma timme.
 # LOCALIZATION NOTE: Do no translate "setVelocity", "PannerNode", "AudioListener", "speedOfSound" and "dopplerFactor"
 PannerNodeDopplerWarning=SetVelocity goyoo buu, PannerNode nda AudioListener boŋ. SpeedOfSound nda dopplerFactor mo goyoo buu AudioListener boŋ. I ga kaa ka tuusandi. Nda n’ ga baa faaba kul, ma koy https://developer.mozilla.org/enUS/docs/Web/API/AudioListener#Deprecated_features do
 # LOCALIZATION NOTE: Do not translate "Worker".
