--- a/son/browser/chrome/browser/devtools/inspector.properties
+++ b/son/browser/chrome/browser/devtools/inspector.properties
@@ -103,4 +103,4 @@ inspector.menu.copyUrlToClipboard.label=Doboo aderesoo berandi
 # clicks on the attribute of a node in the inspector that is the ID of another
 # element in the DOM (like with <label for="input-id">), and that allows to
 # select that element in the inspector.
-inspector.menu.selectElement.label=#%S ize foo suuba
+inspector.menu.selectElement.label=Haya-ize #%S suuba
