--- a/br/security/manager/chrome/pipnss/nsserrors.properties
+++ b/br/security/manager/chrome/pipnss/nsserrors.properties
@@ -318,3 +318,4 @@ MOZILLA_PKIX_ERROR_NOT_YET_VALID_CERTIFICATE=N'eo ket talvoudek c'hoazh an teste
 MOZILLA_PKIX_ERROR_NOT_YET_VALID_ISSUER_CERTIFICATE=Implijet eo bet un testeni ha n'eo ket talvoudek c'hoazh evit treuzkas testeni an dafariad.
 MOZILLA_PKIX_ERROR_SIGNATURE_ALGORITHM_MISMATCH=An treol sinadur e maezienn sinadur an testeni ne glot ket gant an treol er vaezienn signatureAlgorithm.
 MOZILLA_PKIX_ERROR_OCSP_RESPONSE_FOR_CERT_MISSING=N'eo ket endalc'het ar stad evit an testeni o vezañ gwiriet er respont OSCP.
+MOZILLA_PKIX_ERROR_VALIDITY_TOO_LONG=E-pad re bell eo talvoudek an testeni kinniget gant al lec'hienn.
