--- a/br/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/br/toolkit/chrome/global/devtools/styleinspector.properties
@@ -134,9 +134,11 @@ styleinspector.contextmenu.selectAll=Select All
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.selectAll.accessKey): Access key for
 # the computed view context menu "Select all" entry.
+styleinspector.contextmenu.selectAll.accessKey=A
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.copy): Text displayed in the
 # computed view context menu.
+styleinspector.contextmenu.copy=Copy
 
 # LOCALIZATION NOTE (styleinspector.contextmenu.copy.accessKey): Access key for
 # the computed view context menu "Copy" entry.
