--- a/br/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/br/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -6,7 +6,13 @@ rememberValue = Ober gant an ardoer gerioù-tremen evit derc'hel soñj eus ar we
 rememberPassword = Ober gant an ardoer gerioù-tremen evit derc'hel soñj eus ar ger-tremen-mañ.
 savePasswordTitle = Kadarnaat
 # LOCALIZATION NOTE (rememberLoginMsg, rememberLoginMsgNoUser): %S is brandShortName
-rememberLoginButtonAccessKey = A
+rememberLoginMsg = Fellout a ra deoc'h derc'hel soñj eus ar ger-tremen war %S ?
+rememberLoginMsgNoUser = Fellout a ra deoc'h derc'hel soñj eus ar ger-tremen war %S ?
+rememberLoginButtonText = Derc'hel soñj
+rememberLoginButtonAccessKey = D
+updateLoginMsg = Fellout a ra deoc'h hizivaat an titouroù kennaskañ enrollet ?
+updateLoginMsgNoUser = Fellout a ra deoc'h hizivaat ar ger-tremen enrollet ?
+updateLoginButtonText = Hizivaat
 updateLoginButtonAccessKey = H
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname. 
@@ -17,6 +23,7 @@ rememberPasswordMsg = Fellout a ra deoc'h derc'hel soñj eus ar ger-tremen evit 
 rememberPasswordMsgNoUsername = Fellout a ra deoc'h derc'hel soñj eus ar ger-tremen war %S ?
 # LOCALIZATION NOTE (noUsernamePlaceholder):
 # This is displayed in place of the username when it is missing.
+noUsernamePlaceholder=Anv arveriad ebet
 # LOCALIZATION NOTE (showPasswordPlaceholder):
 # This is displayed in the password field to indicate that the password will be
 # shown if focused.
@@ -29,12 +36,14 @@ notifyBarNeverRememberButtonText = Arabat derc'hel soñj eus ar ger-tremen evit 
 notifyBarNeverRememberButtonAccessKey = e
 rememberButtonText = &Derc'hel soñj
 notifyBarRememberPasswordButtonText = Derc'hel soñj eus ar ger-tremen
+notifyBarRememberPasswordButtonAccessKey = D
 passwordChangeTitle = Kadarnaat kemm ar ger-tremen
 # LOCALIZATION NOTE (updatePasswordMsg):
 # String is the username for the login.
 updatePasswordMsg = Fellout a ra deoc'h hizivaat ar ger-tremen enrollet evit "%S" ?
 updatePasswordMsgNoUser = Fellout a ra deoc'h hizivaat ar ger-tremen enrollet ?
 notifyBarUpdateButtonText = Hizivaat ar ger-tremen
+notifyBarUpdateButtonAccessKey = H
 notifyBarDontChangeButtonText = Na gemmañ
 notifyBarDontChangeButtonAccessKey = N
 userSelectText = Diuzit evit pe arveriad e fell deoc'h kemmañ e c'her-tremen :
@@ -45,6 +54,7 @@ showPasswordsAccessKey=D
 noMasterPasswordPrompt=Ha sur oc'h ho peus c'hoant da ziskouez ho kerioù-tremen ?
 removeAllPasswordsPrompt=Ha sur oc'h e fell deoc'h lemel kuit an holl c'herioù-tremen ?
 removeAllPasswordsTitle=Dilemel an holl c'herioù-tremen
+removeLoginPrompt=Ha sur oc'h e fell deoc'h lemel kuit an titouroù kennaskañ-mañ ?
 removeLoginTitle=Dilemel an titouroù kennaskañ
 loginsSpielAll=Gwaredet eo ar gerioù-tremen evit al lec'hiennoù da heul war hoc'h urzhiataer :
 loginsSpielFiltered=Ar gerioù-tremen-mañ a glot gant ho klask :
@@ -54,5 +64,6 @@ loginsSpielFiltered=Ar gerioù-tremen-mañ a glot gant ho klask :
 loginHostAge=%1$S (%2$S)
 # LOCALIZATION NOTE (noUsername):
 # String is used on the context menu when a login doesn't have a username.
+noUsername=Anv arveriad ebet
 duplicateLoginTitle=An anv arveriad a zo dioutañ endeo.
 duplicateLogin=Titouroù kennaskañ gant an anv-mañ a zo diouto endeo.
