[br] update from Pootle (firefox)

--- a/br/browser/chrome/browser/loop/loop.properties
+++ b/br/browser/chrome/browser/loop/loop.properties
@@ -146,6 +146,7 @@ import_failed_support_button=Skoazell
 remove_contact_menu_button2=Lemel an darempred...
 ## LOCALIZATION NOTE(remove_contact_title): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
+remove_contact_menu_button3=Dilemel an darempred
 ## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
 ## to confirm deletion of a contact.
 confirm_delete_contact_alert=Ha sur oc'h e fell deoc'h dilemel an darempred-mañ ?
@@ -215,6 +216,7 @@ active_screenshare_button_title=Paouez da rannañ
 inactive_screenshare_button_title=Rannit ho skramm
 share_tabs_button_title2=Rannañ ho ivinelloù
 share_windows_button_title=Rannañ prenestroù all
+self_view_hidden_message=Kuzhet eo an emwel met kaset eo c'hoazh; adventit ar prenestr evit skrammañ
 
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
