[br] update from Pootle (firefox)

--- a/br/browser/chrome/browser/loop/loop.properties
+++ b/br/browser/chrome/browser/loop/loop.properties
@@ -152,6 +152,7 @@ remove_contact_menu_button3=Dilemel an darempred
 confirm_delete_contact_alert=Ha sur oc'h e fell deoc'h dilemel an darempred-mañ ?
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Dilemel an darempred
 confirm_delete_contact_cancel_button=Nullañ
 ## LOCALIZATION NOTE(contact_list_title): This is in uppercase in English for
 ## emphasis, please do what is appropriate for specific locales.
