--- a/br/browser/chrome/browser/migration/migration.properties
+++ b/br/browser/chrome/browser/migration/migration.properties
@@ -28,34 +28,41 @@ importedSafariReadingList=Roll al lennadurioù (diouzh Safari)
 1_360se=Gwellvezioù
 
 2_ie=Toupinoù
+2_edge=Toupinoù
 2_safari=Toupinoù
 2_chrome=Toupinoù
 2_firefox=Toupinoù
 2_360se=Toupinoù
 
 4_ie=Roll al lec'hiennoù bet gweladennet
+4_edge=Roll al lec'hiennoù bet gweladennet
 4_safari=Roll al lec'hiennoù bet gweladennet
 4_chrome=Roll al lec'hiennoù bet gweladennet
 4_firefox_history_and_bookmarks=Roll al lec'hiennoù bet gweladennet ha sinedoù
 4_360se=Roll al lec'hiennoù bet gweladennet
 
 8_ie=Istor ar furmskrid enrollet
+8_edge=Istor ar furmskrid enrollet
 8_safari=Istor ar furmskrid enrollet
 8_chrome=Istor ar furmskrid enrollet
 8_firefox=Istor ar furmskrid enrollet
 8_360se=Istor ar furmskridoù enrollet
 
 16_ie=Gerioù-tremen enrollet
+16_edge=Gerioù-tremen enrollet
 16_safari=Gerioù-tremen enrollet
 16_chrome=Gerioù-tremen enrollet
 16_firefox=Gerioù-tremen enrollet
 16_360se=Gerioù-tremen enrollet
 
+32_ie=Ma re well ganin
+32_edge=Ma re well ganin
 32_safari=Sinedoù
 32_chrome=Sinedoù
 32_360se=Sinedoù
 
 64_ie=Roadennoù all
+64_edge=Roadennoù all
 64_safari=Roadennoù all
 64_chrome=Roadennoù all
 64_firefox_other=Roadennoù all
