--- a/br/dom/chrome/dom/dom.properties
+++ b/br/dom/chrome/dom/dom.properties
@@ -156,6 +156,7 @@ XMLDocumentLoadPrincipalMismatch=Difennet eo an arver eus document.load war Docu
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=Dilezet ez eus bet un treuzgread IndexedDB na oa ket echu c'hoazh en abeg d'ur merdeiñ e-touez pajennoù.
 # LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+WillChangeOverBudgetIgnoredWarning=Bevezerezh memor ar will-change a zo re uhel. Maez ar gorread a gemer %1$S piksel, ar budjet a zo maez gorread an teul lieskementet dre %2$S (%3$S piksel). An holl elfennoù will-change en teul a zo laosket da gostez pa za dreist d'ar budjet.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker".
 HittingMaxWorkersPerDomain=ServiceWorker n'hall ket bezañ loc'het diouzhtu rak teulioù all en hevelep orin a arver an niver uc'hek a labourerien. Lakaet eo bet ServiceWorker el lost ha loc'het e vo goude ma vo echu gant labourerien all.
 # LOCALIZATION NOTE: Do no translate "setVelocity", "PannerNode", "AudioListener", "speedOfSound" and "dopplerFactor"
