--- a/br/dom/chrome/accessibility/AccessFu.properties
+++ b/br/dom/chrome/accessibility/AccessFu.properties
@@ -76,6 +76,9 @@ term           =       termen
 definition     =       despizadur
 
 mathmltable              = math table
+mathmlcell               = kellig
+mathmlenclosed           = enclosed
+mathmlfraction           = fraction
 mathmlfractionwithoutbar = fraction without bar
 mathmlroot               = root
 mathmlscripted           = scripted
@@ -219,6 +222,8 @@ notation-radical            = radical
 notation-box                = box
 notation-roundedbox         = rounded box
 notation-circle             = circle
+notation-left               = left
+notation-right              = right
 notation-top                = top
 notation-bottom             = bottom
 notation-updiagonalstrike   = up diagonal strike
@@ -240,6 +245,7 @@ dialogAbbr         =       kendiviz
 separatorAbbr      =       disranner
 toolbarAbbr        =       barren ostilhoù
 statusbarAbbr      =       barren stad
+tableAbbr          =       tln
 columnheaderAbbr   =       talbenn bann
 rowheaderAbbr      =       talbenn renk
 columnAbbr         =       bann
@@ -311,6 +317,9 @@ stateUncheckedAbbr = ( )
 statePressedAbbr = (x)
 stateUnpressedAbbr = ( )
 
+mathmlenclosedAbbr           = enclosed
+mathmltableAbbr              = tln
+mathmlcellAbbr               = cell
 mathmlfractionAbbr           = frac
 mathmlfractionwithoutbarAbbr = frac no bar
 mathmlrootAbbr               = root
@@ -318,8 +327,10 @@ mathmlscriptedAbbr           = scripted
 mathmlsquarerootAbbr         = sqrt
 
 baseAbbr           = base
+close-fenceAbbr    = close
 denominatorAbbr    = den
 numeratorAbbr      = niv
+open-fenceAbbr     = open
 overscriptAbbr     = over
 presubscriptAbbr   = presub
 presuperscriptAbbr = presup
@@ -331,8 +342,12 @@ underscriptAbbr    = under
 notation-longdivAbbr            = longdiv
 notation-actuarialAbbr          = act
 notation-phasorangleAbbr        = phasang
+notation-radicalAbbr            = rad
+notation-boxAbbr                = box
 notation-roundedboxAbbr         = rndbox
 notation-circleAbbr             = circ
+notation-leftAbbr               = lft
+notation-rightAbbr              = rght
 notation-topAbbr                = top
 notation-bottomAbbr             = bot
 notation-updiagonalstrikeAbbr   = updiagstrike
