--- a/br/dom/chrome/security/security.properties
+++ b/br/dom/chrome/security/security.properties
@@ -19,17 +19,27 @@ CORSMissingAllowHeaderFromPreflight=Goulenn liesorin stanket : ar reolenn a-fet 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security", "HSTS", "max-age" or "includeSubDomains"
 STSUnknownError=Strict-Transport-Security: ur fazi dianav a zo c'hoarvezet e-pad keweriañ an talbenn erspizet gant al lec'hienn.
 STSUntrustworthyConnection=Strict-Transport-Security : n'haller ket kaout fiziañs er c'hennask d'al lec'hienn-mañ, neuze eo bet laosket an talbenn a-gostez.
+STSCouldNotParseHeader=Strict-Transport-Security : Erspizet eo bet un talbenn n'haller ket dezrannañ gant al lec'hienn.
 STSNoMaxAge=Strict-Transport-Security: Erspizet eo bet un talbenn na endalc'h ket a sturiad 'max-age' gant al lec'hienn.
 STSMultipleMaxAges=Strict-Transport-Security: Erspizet eo bet un talbenn oc'h enderc'hel meur a sturiad 'max-age' gant al lec'hienn.
+STSInvalidMaxAge=Strict-Transport-Security: Erspizet eo bet un talbenn oc'h enderc'hel ur sturiad 'max-age' didalvoud gant al lec'hienn.
+STSMultipleIncludeSubdomains=Strict-Transport-Security: Erspizet eo bet un talbenn oc'h enderc'hel meur a sturiad 'includeSubDomains' gant al lec'hienn.
+STSInvalidIncludeSubdomains=Strict-Transport-Security : erspizet eo bet un talbenn oc'h enderc'hel ur sturiad 'includeSubDomains' didalvoud gant al lec'hienn.
 STSCouldNotSaveState=Strict-Transport-Security: ur fazi a zo c'hoarvezet en ur merkañ al lec'hienn evel un ostiz Strict-Transport-Security.
 
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age" or "includeSubDomains"
 PKPUnknownError=Public-Key-Pins : ur fazi dianav a zo c'hoarvezet e-pad keweriañ an talbenn erspizet gant al lec'hienn.
+PKPUntrustworthyConnection=Public-Key-Pins : n'haller ket kaout fiziañs er c'hennask d'al lec'hienn-mañ, neuze eo bet laosket an talbenn a-gostez.
 PKPCouldNotParseHeader=Public-Key-Pins: Erspizet eo bet un talbenn n'haller ket dezrannañ gant al lec'hienn.
+PKPNoMaxAge=Public-Key-Pins: Erspizet eo bet un talbenn na endalc'h ket a sturiad 'max-age' gant al lec'hienn.
+PKPMultipleMaxAges=Public-Key-Pins: Erspizet eo bet un talbenn a endalc'h meur a sturiad 'max-age' gant al lec'hienn.
 PKPInvalidMaxAge=Public-Key-Pins: Erspizet eo bet un talbenn a endalc'h ur sturiad 'max-age' didalvoud.
 PKPMultipleIncludeSubdomains=Public-Key-Pins: erspizet eo bet un talbenn oc'h enderc'hel meur a sturiad 'includeSubDomains' gant al lec'hienn.
 PKPInvalidIncludeSubdomains=Public-Key-Pins : erspizet eo bet un talbenn oc'h enderc'hel ur sturiad 'includeSubDomains' didalvoud gant al lec'hienn.
 PKPInvalidPin=Public-Key-Pins: Erspizet eo bet un talbenn gant ur pin didalvoudek gant al lec'hienn.
+PKPMultipleReportURIs=Public-Key-Pins: erspizet eo bet un talbenn oc'h enderc'hel meur a sturiad 'report-uri' gant al lec'hienn.
+PKPPinsetDoesNotMatch=Public-Key-Pins: Erspizet eo bet un talbenn gant ur pin didalvoudek gant al lec'hienn.
+PKPNoBackupPin=Public-Key-Pins: Erspizet eo bet un talbenn hep pin gwarediñ gant al lec'hienn.
 PKPCouldNotSaveState=Public-Key-Pins : ur fazi a zo c'hoarvezet en ur merkañ al lec'hienn evel ostiz Public-Key-Pins.
 
 # LOCALIZATION NOTE: Do not translate "SHA-1"
