[son] update from Pootle (firefox)

--- a/son/dom/chrome/plugins.properties
+++ b/son/dom/chrome/plugins.properties
@@ -25,7 +25,7 @@ learn_more_label=Bay ka tonton
 gmp_license_info=Duɲekaddasu alhabar
 
 openH264_name=OpenH264 Video Codec kaŋ Cisco Systems, Inc. n'a noo.
-openH264_description2=Mozilla ga bonse-sukari kayandi, hala nga nda WebRTC ma hin ka koy nda cere. Nda mo, WebRTC ma hin ka goy nda nga maršin-kotantey, kan ngey diraa ga codec vidéoH.264 waazibandi. Codec ɲaŋey bangandi http://www.openh264.org/ boŋ, hala ma hansa ka faham nga diraa se.
+openH264_description2=Mozilla ga bonse-sukari kayandi, hala nga nda WebRTC ma hin ka koy nda cere. Nda mo, WebRTC ma hin ka goy nda nga maršin-kotantey, kan ngey diraa ga widewo codec H.264 waažibandi. Codec ɲaŋey bangandi http://www.openh264.org/ boŋ, hala ma hansa ka faham nga diraa se.
 
 eme-adobe_name=Gunayan waatiboŋ kufal-kaayan dunbu kaŋ Adobe Systems,Incorporated n'a noo
 eme-adobe_description=Interneti widewo kaŋ ši hẽenandi.
