[ach] update from Pootle (firefox)

--- a/ach/browser/chrome/browser/browser.properties
+++ b/ach/browser/chrome/browser/browser.properties
@@ -492,9 +492,6 @@ webapps.doNotUninstall.accesskey = D
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 webapps.requestUninstall = I mito kwanyo woko “%1$S”?
 
-# LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
-fullscreen.entered=%S dong kombedi opongo wang kompiuta.
-
 # LOCALIZATION NOTE (fullscreenButton.tooltip): %S is the keyboard shortcut for full screen
 fullscreenButton.tooltip=Yar dirica opong wang komputa weng (%S)
 
@@ -564,6 +561,9 @@ getUserMedia.noScreen.label = Wang kompiuta pe tye
 getUserMedia.noWindow.label = Dirica pe tye
 getUserMedia.noAudio.label = Dwon Pe
 getUserMedia.shareEntireScreen.label = Wang kompiuta weng
+# LOCALIZATION NOTE (getUserMedia.shareMonitor.label):
+# %S is screen number (digits 1, 2, etc)
+# Example: Screen 1, Screen 2,..
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -758,3 +758,4 @@ e10s.accessibilityNotice.disableAndRestart.label = Juki kadong i nwo cako
 e10s.accessibilityNotice.disableAndRestart.accesskey = n
 e10s.accessibilityNotice.dontDisable.label = Pe ijuki
 e10s.accessibilityNotice.dontDisable.accesskey = P
+
