--- a/ach/browser/chrome/browser/devtools/markers.properties
+++ b/ach/browser/chrome/browser/devtools/markers.properties
@@ -20,7 +20,7 @@ marker.label.paint=Wiro ki rangi
 marker.label.javascript=Lwongo me Tic
 marker.label.domevent=Time pa DOM
 marker.label.consoleTime=Kacoc
-marker.label.garbageCollection=GC ma kimedo
+marker.label.garbageCollection.incremental=GC ma kimedo
 marker.label.unknown=Pe ngene
 
 # LOCALIZATION NOTE (marker.label.javascript.*):
