--- a/ach/dom/chrome/dom/dom.properties
+++ b/ach/dom/chrome/dom/dom.properties
@@ -155,7 +155,7 @@ ImportXULIntoContentWarning=Kelo kakube me XUL kiwoko i gin acoya manonge iye do
 XMLDocumentLoadPrincipalMismatch=Ki gengo tic ki document.load woko ikom gin acoya ma aa ki Dirica mukene. Dirica ma kicweyo gin acoya meno iye keken aye ki ye me lwongo .load ikom ginacoya ne. Ma ber ne, tii ki XMLHttpRequest me kakare.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=Kibalo woko kube me IndexedDB ma onongo pud pe otum pi wot me pot buk.
-# LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+# LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S are numbers.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker".
 # LOCALIZATION NOTE: Do no translate "setVelocity", "PannerNode", "AudioListener", "speedOfSound" and "dopplerFactor"
 # LOCALIZATION NOTE: Do not translate "Worker".
@@ -164,4 +164,6 @@ IndexedDBTransactionAbortNavigation=Kibalo woko kube me IndexedDB ma onongo pud 
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "FetchEvent.respondWith()", "FetchEvent.request.type", "same-origin", "cors", "no-cors", "opaque", "Response", or "RequestMode".
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "Error", "Response", "FetchEvent.respondWith()", or "fetch()".
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "Response", "FetchEvent.respondWith()", or "Response.clone()".
-# LOCALIZATION NOTE: Do not translate "ServiceWorker", "Response", "FetchEvent.respondWith()", "FetchEvent.request", or "Worker".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "opaque", "Response", "FetchEvent.respondWith()", "FetchEvent.request", or "Worker".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "opaqueredirect", "Response", "FetchEvent.respondWith()", or "FetchEvent.request".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker" or "FetchEvent.preventDefault()".
