--- a/ach/browser/chrome/browser/accounts.properties
+++ b/ach/browser/chrome/browser/accounts.properties
@@ -27,6 +27,8 @@ resendVerificationEmail.accessKey = N
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 reconnectDescription = Nwo kubo %S
 
+# LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+
 forgetMigration.label = Wek wi wil
 forgetMigration.accessKey = W
 
@@ -43,6 +45,7 @@ verificationSentTitle = Moko ada kicwalo
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
 verificationSentHeading = Kicwalo kakube me moko ada i %S
 verificationSentDescription = Tim ber i rot email mamegi kadong i dii kakube wek i cak tic marom.
+# LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
 
 verificationNotSentTitle = Pe twero cwalo moko ada
 verificationNotSentHeading = Pe wa twero cwalo email me moko ada i cawa man
