--- a/ach/browser/chrome/browser/devtools/performance.properties
+++ b/ach/browser/chrome/browser/devtools/performance.properties
@@ -69,7 +69,6 @@ graphs.fps=fps
 # This string is displayed in the flamegraph of the Performance Tools,
 # as the unit used to measure time (in milliseconds). This label should be kept
 # AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
-graphs.ms=ms
 
 # LOCALIZATION NOTE (graphs.memory):
 # This string is displayed in the memory graph of the Performance tool,
@@ -91,13 +90,17 @@ category.storage=Kakano
 category.events=Me aketa & Gin matime
 category.tools=Gintic
 
-# LOCALIZATION NOTE (table.ms):
-# This string is displayed in the call tree after units of time in milliseconds.
-table.ms=ms
+# LOCALIZATION NOTE (table.bytes):
+# This string is displayed in the call tree after bytesize units.
+# %S represents the value in bytes.
 
-# LOCALIZATION NOTE (table.percentage):
+# LOCALIZATION NOTE (table.ms2):
+# This string is displayed in the call tree after units of time in milliseconds.
+# %S represents the value in milliseconds.
+
+# LOCALIZATION NOTE (table.percentage2):
 # This string is displayed in the call tree after units representing percentages.
-table.percentage=%
+# %S represents the value in percentage with two decimal points, localized.
 
 # LOCALIZATION NOTE (table.root):
 # This string is displayed in the call tree for the root node.
@@ -111,12 +114,7 @@ table.root=(root)
 # labels which, when clicked, jump to the debugger.
 table.url.tooltiptext=Nen coc i lanong bal
 
-# LOCALIZATION NOTE (table.zoom.tooltiptext):
-# This string is displayed in the call tree as the tooltip text for the 'zoom'
-# buttons (small magnifying glass icons) which spawn a new tab.
-table.zoom.tooltiptext=Ngi pem i dirica matidi manyen
-
-# LOCALIZATION NOTE (table.view-optimizations.tooltiptext):
+# LOCALIZATION NOTE (table.view-optimizations.tooltiptext2):
 # This string is displayed in the icon displayed next to frames that
 # have optimization data
 
