--- a/ach/browser/chrome/browser/loop/loop.properties
+++ b/ach/browser/chrome/browser/loop/loop.properties
@@ -20,10 +20,9 @@ sign_in_again_button=Dony iyie
 ## LOCALIZATION_NOTE(sign_in_again_use_as_guest_button2): {{clientSuperShortname}}
 ## will be replaced by the super short brandname.
 
-## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
-## replaced by the brand name
-first_time_experience_title={{clientShortname}} — Dony i boko lok
 first_time_experience_button_label=Caki
+## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
+## user to create his or her first conversation.
 
 invite_header_text=Lwong ngati mo odony iye.
 
@@ -74,25 +73,23 @@ settings_menu_button_tooltip=Ter
 
 ## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
 ## the search field.
-contacts_search_placesholder=Yeny…
+contacts_search_placesholder2=Yeny…
 
-## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
-new_contact_button=Namba cim manyen
-## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
-## These are the placeholders for the fields for entering a new contact. Click
-## the 'New Contact' button to see the fields.
-new_contact_name_placeholder=Nying
-new_contact_email_placeholder=Email
-new_contact_fxos_phone_placeholder=Cim me Firefox OS
-new_contact_phone_placeholder2=Cim
+## LOCALIZATION NOTE (contact_form_*_placeholder):
+## These are the placeholders for the inputs for entering or editing a contact
+## Click the 'New Contact' button to see the fields.
+contact_form_fxos_phone_placeholder=Cim me Firefox OS
+contact_form_phone_placeholder2=Cim
 
 contacts_blocked_contacts=Namba cim ma kigengo
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
-add_contact_button=Med namba cim
+## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
+## panel. It is displayed when Add Contact is selected.
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -113,10 +110,16 @@ importing_contacts_progress_button=Kelo ki woko…
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Rib Namba cim
-## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
+## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
-## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
+## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
+## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
+## has no conversations available.
+## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
+## user to start a new conversation.
+## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
+## search returned no matching results.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -160,7 +163,6 @@ edit_contact_email_label=Email
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
-edit_contact_done_button=Otum
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -173,7 +175,6 @@ video_call_menu_button=Boko lok me video
 ## LOCALIZATION NOTE(gravatars_promo_message): The {{learn_more}} part will be
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message_learnmore=Nong ngec mapol
-gravatars_promo_button_nothanks=Pe,apwoyo
 
 # Conversation Window Strings
 
@@ -189,8 +190,6 @@ hangup_button_title=Juki
 hangup_button_caption2=Kat woko
 mute_local_audio_button_title=Kwany dwone woko
 unmute_local_audio_button_title=Dwok dwone
-mute_local_video_button_title=Kwany dwone woko
-unmute_local_video_button_title=Dwok dwone
 active_screenshare_button_title=Juk nywako
 
 
@@ -224,7 +223,6 @@ restart_call=Nwo donyo
 contact_unavailable_title={{contactName}} pe tye.
 generic_contact_unavailable_title=Dano man pe tye.
 
-generic_failure_title=Gin mo otime marac.
 generic_failure_with_reason2=I romo temo doki onyo cwal kakube me nongi lacen.
 generic_failure_no_reason2=Imito temo doki?
 
@@ -276,24 +274,17 @@ tour_label=Wot
 rooms_default_room_name_template=Boko lok {{conversationLabel}}
 rooms_leave_button_label=Weki
 rooms_list_copy_url_tooltip=Lok kakube
-## LOCALIZATION NOTE (rooms_list_current_conversations):
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## We prefer to have no number in the string, but if you need it for your
-## language please use {{num}}.
-rooms_list_current_conversations=Boko lok ma kombedi;Boko lok ma kombedi;
+## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
+## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
 rooms_list_delete_tooltip=Jwa boko lok
 rooms_list_deleteConfirmation_label=Imoko ada?
-rooms_list_no_current_conversations=Boko lok kombedi pe
 rooms_change_failed_label=Pe kitwero keto ngec manyen i boko lok
 rooms_new_room_button_label=Cak boko lok
-rooms_only_occupant_label=Itye me namba acel kany.
 rooms_panel_title=Yer boko lok onyo cak ma nyen
 rooms_room_full_label=Dano aryo dong matye i boko lok man.
 rooms_room_full_call_to_action_nonFx_label=Gam {{brandShortname}} me cako mamegi
 rooms_room_full_call_to_action_label=Nong ngec mapol ikom {{clientShortname}} »
 rooms_room_joined_label=Ngat moni odonyo i boko lok!
-rooms_room_join_label=Dony i boko lok
 rooms_signout_alert=Ki biloro woko boko lok matye ayaba
 
 # Infobar strings
@@ -302,16 +293,19 @@ infobar_button_gotit_label=Aniang dong!
 
 # Context in conversation strings
 
-# LOCALIZATION NOTE (context_inroom_label): this string is followed by the
-# title/URL of the website you are having a conversation about, displayed on a
+# LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
+# conversation window when the user edits context. It is a header to the edit
+# section.
+# LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
+# title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
-context_save_label2=Gwok
 context_learn_more_link_label=Nong ngec mapol.
+
 
 # Text chat strings
 
