--- a/ach/browser/chrome/browser/tabbrowser.properties
+++ b/ach/browser/chrome/browser/tabbrowser.properties
@@ -31,6 +31,8 @@ tabs.closeButtonMultiple=Lor dirica matino
 tabs.closeWarningPromptMe=Cika kace ateme me loro dirica matino mapol
 
 tabs.closeTab.tooltip=Lor tab
+# LOCALIZATION NOTE (tabs.closeSelectedTab.tooltip):
+# %S is the keyboard shortcut for closing the current tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
 # LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
