--- a/ach/dom/chrome/security/security.properties
+++ b/ach/dom/chrome/security/security.properties
@@ -8,7 +8,7 @@ BlockMixedActiveContent = Kigengo cano gin manonge iye matiyo ma orube "%1$S"
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security", "HSTS", "max-age" or "includeSubDomains"
 
-# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age" or "includeSubDomains"
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age", "report-uri" or "includeSubDomains"
 
 # LOCALIZATION NOTE: Do not translate "SHA-1"
 SHA1Sig=Kakube man tiyo ki waraga me SHA-1;kicwako ni myero i tii ki waraga ma tye ki cik me capa cing ma tiyo ki tic ma tek loyo SHA-1.
@@ -21,7 +21,14 @@ LoadingMixedDisplayContent2=Cano "%1$S" me yar ma orube (mape ki ber bedo) i pot
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=iframe ma tye ki allow-scripts kacel ki allow-same-origin pi lapok kin jami me sandbox mamege twero kwanyo woko poko kin purugram mamege.
 
-# LOCALIZATION NOTE: Do not translate "SSL 3.0".
-WeakProtocolVersionWarning=Kakube man tiyo ki cik SSL 3.0 me boyo coc, ma dong pe tiyo ki ber bedo ne pe.
+# Sub-Resource Integrity
+# LOCALIZATION NOTE: Do not translate "script" or "integrity". "%1$S" is the invalid token found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the type of hash algorigthm in use (e.g. "sha256").
+# LOCALIZATION NOTE: "%1$S" is the URI of the sub-resource that cannot be protected using SRI.
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the invalid hash algorithm found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+
 # LOCALIZATION NOTE: Do not translate "RC4".
 WeakCipherSuiteWarning=Kakube man tiyo ki cipher RC4 me boyo coc, ma dong pe tiyo ki ber bedo ne pe.
