--- a/ach/services/sync/sync.properties
+++ b/ach/services/sync/sync.properties
@@ -8,6 +8,9 @@ client.name2 = %2$S pa %1$S ikom %3$S
 # %S is the date and time at which the last sync successfully completed
 lastSync2.label = Agiki sync: %S
 
+# signInToSync.description is the tooltip for the Sync buttons when Sync is
+# not configured.
+
 mobile.label = Alama me pot but ma kiwoto kwede
 
 remote.pending.label = Dirija matidi mape ki waya tye kakete…
