[ak] update from Pootle (firefox)

--- a/ak/browser/chrome/browser/browser.properties
+++ b/ak/browser/chrome/browser/browser.properties
@@ -396,9 +396,6 @@ webapps.install.inprogress = Instɔlehyɛn gu so
 webapps.uninstall = Yi-instɔl
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 
-# LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
-fullscreen.entered=%S yɛ skreen-tɛtrɛtɛɛ
-
 # LOCALIZATION NOTE (fullscreenButton.tooltip): %S is the keyboard shortcut for full screen
 fullscreenButton.tooltip=Kyerɛ tokura no wɔ skreen tɛtrɛtɛɛ mu (%S)
 
@@ -442,6 +439,9 @@ getUserMedia.shareMicrophone.message = Wo bɛ pɛ sɛ wo ne %S bɛkyɛ wo maek a
 getUserMedia.shareCameraAndMicrophone.message = Wo bɛ pɛ sɛ wo ne %S bɛkyɛ wo mfonin-fidie ne maek anaa?
 getUserMedia.noVideo.label = Video biara nni hɔ
 getUserMedia.noAudio.label = Ɔdio biara nni hɔ
+# LOCALIZATION NOTE (getUserMedia.shareMonitor.label):
+# %S is screen number (digits 1, 2, etc)
+# Example: Screen 1, Screen 2,..
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -544,3 +544,4 @@ customizeTips.tip0.learnMore = Sua bi ka ho
 # on the pre-release channels. They won't be used in release but they will likely be used in
 # beta starting from version 41, so it's still useful to have these strings properly localized.
 # %S is brandShortName
+
