--- a/ak/browser/chrome/browser/tabbrowser.properties
+++ b/ak/browser/chrome/browser/tabbrowser.properties
@@ -31,6 +31,8 @@ tabs.closeButtonMultiple=To ntab yinom mu
 tabs.closeWarningPromptMe=Bɔ me kɔkɔ sɛ me yɛ sɛ me rebɛto ntab bebreebe mu a
 
 tabs.closeTab.tooltip=To tab yi mu
+# LOCALIZATION NOTE (tabs.closeSelectedTab.tooltip):
+# %S is the keyboard shortcut for closing the current tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
 # LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
