--- a/ak/browser/chrome/browser/accounts.properties
+++ b/ak/browser/chrome/browser/accounts.properties
@@ -19,6 +19,8 @@ signInAfterUpgradeOnOtherDevice.accessKey = B
 
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 
+# LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+
 
 
 unlinkVerificationConfirm = Yi lenke
@@ -26,4 +28,5 @@ unlinkVerificationConfirm = Yi lenke
 # These strings are used in a dialog we display after the user requests we resend
 # a verification email.
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
+# LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
 
