--- a/ak/browser/chrome/browser/preferences/preferences.properties
+++ b/ak/browser/chrome/browser/preferences/preferences.properties
@@ -25,6 +25,28 @@ popuppermissionstitle=Asaet a wɔwɔ kwan- Bue-pue-so
 invalidURI=Me srɛ wo, bɔ ɔhɔhogyefo din a ɛyɛ nokware
 invalidURITitle=Wo abɔ ɔhɔhogyefo din nkontompo
 
+#### Block List Manager
+
+blockliststext=You can choose which list Firefox will use to block Web elements that may track your browsing activity.
+blockliststitle=Block Lists
+# LOCALIZATION NOTE (mozNameTemplate): This template constructs the name of the
+# block list in the block lists dialog. It combines the list name and
+# description.
+#   e.g. mozNameTemplate : "Standard (Recommended). This list does a pretty good job."
+#   %1$S = list name (fooName), %2$S = list descriptive text (fooDesc)
+mozNameTemplate=%1$S %2$S
+# LOCALIZATION NOTE (mozstdName, etc.): These labels appear in the tracking
+# protection block lists dialog, mozNameTemplate is used to create the final
+# string. Note that in the future these two strings (name, desc) could be
+# displayed on two different lines.
+mozstdName=Disconnect.me basic protection (Recommended).
+mozstdDesc=Allows some trackers so websites function properly.
+mozfullName=Disconnect.me strict protection.
+mozfullDesc=Blocks known trackers. Some sites may not function properly.
+# LOCALIZATION NOTE (blocklistChangeRequiresRestart, restartTitle): %S = brandShortName
+blocklistChangeRequiresRestart=%S must restart to change block lists.
+shouldRestartTitle=San hyɛ %S ase
+
 #### Master Password
 
 pw_change2empty_in_fips_mode=Sesei no wowɔ FIPS tebea mu. FIPS hia Ehintasɛmfua Titiriw a ano yɛ den.
