--- a/ak/services/sync/sync.properties
+++ b/ak/services/sync/sync.properties
@@ -8,6 +8,9 @@ client.name2 = %1$S's %2$S wɔ %3$S
 # %S is the date and time at which the last sync successfully completed
 lastSync2.label = Synk a etwa to: %S
 
+# signInToSync.description is the tooltip for the Sync buttons when Sync is
+# not configured.
+
 mobile.label = Seisei Mbukmaak
 
 remote.pending.label = Ntamteteɛ tab no asynke...
