[an] update from Pootle (firefox)

--- a/an/browser/chrome/browser/devtools/markers.properties
+++ b/an/browser/chrome/browser/devtools/markers.properties
@@ -22,7 +22,7 @@ marker.label.parseHTML=Parsiar HTML
 marker.label.parseXML=Parse XML
 marker.label.domevent=Evento DOM
 marker.label.consoleTime=Consola
-marker.label.garbageCollection=Contexto grafico (GC) incremental
+marker.label.garbageCollection.incremental=Contexto grafico (GC) incremental
 marker.label.garbageCollection.nonIncremental=Contexto grafico (GC) no incremental
 marker.label.cycleCollection=Replega de ciclo
 marker.label.cycleCollection.forgetSkippable=Reducción de grafico CC
