--- a/an/browser/chrome/browser/tabbrowser.properties
+++ b/an/browser/chrome/browser/tabbrowser.properties
@@ -31,6 +31,8 @@ tabs.closeButtonMultiple=Zarrar as pestanyas
 tabs.closeWarningPromptMe=Alvertir-me quan si miro de zarrar multiples pestanyas
 
 tabs.closeTab.tooltip=Zarrar a pestanya
+# LOCALIZATION NOTE (tabs.closeSelectedTab.tooltip):
+# %S is the keyboard shortcut for closing the current tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
 tabs.muteAudio.tooltip=Silenciar a pestanya (%S)
