--- a/an/browser/chrome/browser/accounts.properties
+++ b/an/browser/chrome/browser/accounts.properties
@@ -27,6 +27,8 @@ resendVerificationEmail.accessKey = R
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 reconnectDescription = Tornar a connectar %S
 
+# LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+
 forgetMigration.label = Oblidar
 forgetMigration.accessKey = O
 
@@ -43,6 +45,7 @@ verificationSentTitle = Verificación ninviada
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
 verificationSentHeading = S'ha ninviau un vinclo de verificación ta %S
 verificationSentDescription = Revise o suyo correu y prete o vinclo ta escomencipiar a sincronización.
+# LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
 
 verificationNotSentTitle = No s'ha puesto ninviar a verificación
 verificationNotSentHeading = No s'ha puesto ninviar un correu de verificación en iste momento
