--- a/an/browser/chrome/browser/loop/loop.properties
+++ b/an/browser/chrome/browser/loop/loop.properties
@@ -25,10 +25,9 @@ sign_in_again_button=Encetar una sesión
 ## will be replaced by the super short brandname.
 sign_in_again_use_as_guest_button2=Usar {{clientSuperShortname}} como Convidau
 
-## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
-## replaced by the brand name
-first_time_experience_title={{clientShortname}} — Unir-se a la conversa
 first_time_experience_button_label=Empecipiar
+## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
+## user to create his or her first conversation.
 
 invite_header_text=Convidar a belún a unir-se.
 
@@ -86,25 +85,23 @@ settings_menu_button_tooltip=Achustes
 
 ## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
 ## the search field.
-contacts_search_placesholder=Mirar…
+contacts_search_placesholder2=Mirar…
 
-## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
-new_contact_button=Contacto nuevo
-## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
-## These are the placeholders for the fields for entering a new contact. Click
-## the 'New Contact' button to see the fields.
-new_contact_name_placeholder=Nombre
-new_contact_email_placeholder=Correu-e
-new_contact_fxos_phone_placeholder=Telefono Firefox OS
-new_contact_phone_placeholder2=Telefono
+## LOCALIZATION NOTE (contact_form_*_placeholder):
+## These are the placeholders for the inputs for entering or editing a contact
+## Click the 'New Contact' button to see the fields.
+contact_form_fxos_phone_placeholder=Telefono Firefox OS
+contact_form_phone_placeholder2=Telefono
 
 contacts_blocked_contacts=Contactos blocaus
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
-add_contact_button=Anyader contacto
+## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
+## panel. It is displayed when Add Contact is selected.
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -128,12 +125,16 @@ import_contacts_success_message=S'ha importau {{total}} contacto correctament.;S
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Sincronizar os contactos
-## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
+## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
-no_contacts_message_heading=No i ha encara garra contacto
-## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
+## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
-no_contacts_import_or_add=Importar u adhibir belún
+## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
+## has no conversations available.
+## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
+## user to start a new conversation.
+## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
+## search returned no matching results.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -180,7 +181,6 @@ edit_contact_email_label=Correu-e
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
-edit_contact_done_button=Feito
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -194,8 +194,6 @@ video_call_menu_button=Conversa de video
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message=Puetz anyader iconos de perfile ta os tuyos contactos compartindo as suyas adrezas de correu con Gravatar. {{learn_more}}.
 gravatars_promo_message_learnmore=Saber-ne mas
-gravatars_promo_button_nothanks=No, gracias
-gravatars_promo_button_use=Usar Iconos de Perfil
 
 # Conversation Window Strings
 
@@ -211,8 +209,6 @@ hangup_button_title=Penchar
 hangup_button_caption2=Salir
 mute_local_audio_button_title=Silenciar o suyo audio
 unmute_local_audio_button_title=Activar o suyo audio
-mute_local_video_button_title=Silenciar o suyo video
-unmute_local_video_button_title=Activar o suyo video
 active_screenshare_button_title=&Deixar de compartir
 inactive_screenshare_button_title=Compartir a tuya pantalla
 share_tabs_button_title2=Compartir as suyas Pestanyas
@@ -250,7 +246,6 @@ restart_call=Tornar a unir-se
 contact_unavailable_title={{contactName}} no ye disponible.
 generic_contact_unavailable_title=Ista persona no ye disponible.
 
-generic_failure_title=Bella cosa ha fallau.
 generic_failure_with_reason2=Torne-lo a intentar u ninvie un vinclo en o que pueda estar localizau mas ta adebant.
 generic_failure_no_reason2=Quiers tornar-lo a intentar?
 
@@ -303,24 +298,17 @@ tour_label=Paseyo
 rooms_default_room_name_template=Conversa {{conversationLabel}}
 rooms_leave_button_label=Abandonar
 rooms_list_copy_url_tooltip=Copiar Vinclo
-## LOCALIZATION NOTE (rooms_list_current_conversations):
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## We prefer to have no number in the string, but if you need it for your
-## language please use {{num}}.
-rooms_list_current_conversations=Conversa actual;Conversas actuals
+## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
+## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
 rooms_list_delete_tooltip=Borrar conversa
 rooms_list_deleteConfirmation_label=En ye seguro?
-rooms_list_no_current_conversations=No i hai conversas en curso
 rooms_change_failed_label=No se puede renombrar a conversa
 rooms_new_room_button_label=Empecipiar una conversa?
-rooms_only_occupant_label=Yes o primero aquí.
 rooms_panel_title=Trigar una conversa u empecipiar-ne una de nueva
 rooms_room_full_label=I hai ya dos personas en ista conversa.
 rooms_room_full_call_to_action_nonFx_label=Baixar {{brandShortname}} ta empecipia a tuya propia
 rooms_room_full_call_to_action_label=Aprender-ne mas sobre {{clientShortname}} »
 rooms_room_joined_label=Belún s'ha uniu a la conversa!
-rooms_room_join_label=Conversa de voz
 rooms_signout_alert=Se zarrarán as conversas ubiertas
 
 # Infobar strings
@@ -333,12 +321,14 @@ infobar_menuitem_dontshowagain_accesskey=D
 
 # Context in conversation strings
 
-# LOCALIZATION NOTE (context_inroom_label): this string is followed by the
-# title/URL of the website you are having a conversation about, displayed on a
+# LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
+# conversation window when the user edits context. It is a header to the edit
+# section.
+# LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
+# title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
-context_inroom_label=Charremos sobre:
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
@@ -346,12 +336,12 @@ context_edit_activate_label=Conversa sobre «{{title}}»
 context_edit_name_placeholder=Nombre d'a conversa
 context_edit_comments_placeholder=Comentarios
 context_add_some_label=Adhibir bell contexto
-context_edit_tooltip=Editar o Contexto
-context_hide_tooltip=Amagar o Contexto
 context_show_tooltip=Amostrar o Contexto
-context_save_label2=Alzar
 context_link_modified=Iste vinclo s'ha modificau.
 context_learn_more_link_label=Saber-ne mas.
+conversation_settings_menu_edit_context=Editar o Contexto
+conversation_settings_menu_hide_context=Amagar o Contexto
+
 
 # Text chat strings
 
