--- a/an/dom/chrome/security/security.properties
+++ b/an/dom/chrome/security/security.properties
@@ -27,7 +27,7 @@ STSMultipleIncludeSubdomains=Strict-Transport-Security: O puesto ha especificau 
 STSInvalidIncludeSubdomains=Strict-Transport-Security: O puesto ha especificau un capitero que incluyiba una directiva invalida 'includeSubDomains'.
 STSCouldNotSaveState=Strict-Transport-Security: Ha ocurriu una error en anotar o puesto como un host Strict-Transport-Security.
 
-# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age" or "includeSubDomains"
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age", "report-uri" or "includeSubDomains"
 PKPUnknownError=Public-Key-Pins: Ha ocurriu una error desconoixida especificada por o puesto.
 PKPUntrustworthyConnection=Public-Key-Pins: A connexión ta o puesto no ye fiable, asinas que s'ha ignorau o capitero especificau.
 PKPCouldNotParseHeader=Public-Key-Pins: O puesto ha especificau un capitero que no s'ha puesto parsiar con exito.
@@ -53,7 +53,14 @@ LoadingMixedDisplayContent2=Cargando conteniu de visualización mixto (inseguro)
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Un iframe que tien tanto allow-scripts como allow-same-origin en o suyo atributo sandbox puede sacar o suyo sandboxing.
 
-# LOCALIZATION NOTE: Do not translate "SSL 3.0".
-WeakProtocolVersionWarning=Iste puesto fa servir o protocolo de zifrau SSL 3.0, que ye obsoleto y inseguro.
+# Sub-Resource Integrity
+# LOCALIZATION NOTE: Do not translate "script" or "integrity". "%1$S" is the invalid token found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the type of hash algorigthm in use (e.g. "sha256").
+# LOCALIZATION NOTE: "%1$S" is the URI of the sub-resource that cannot be protected using SRI.
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the invalid hash algorithm found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+
 # LOCALIZATION NOTE: Do not translate "RC4".
 WeakCipherSuiteWarning=Iste puesto fa servir RC4 como zifrau, que ye obsoleto y inseguro.
