--- a/an/services/sync/sync.properties
+++ b/an/services/sync/sync.properties
@@ -8,6 +8,9 @@ client.name2 = O %2$S de %1$S en %3$S
 # %S is the date and time at which the last sync successfully completed
 lastSync2.label = Zaguera sincronización: %S
 
+# signInToSync.description is the tooltip for the Sync buttons when Sync is
+# not configured.
+
 mobile.label = Marcadors d'o mobil
 
 remote.pending.label = As pestanyas remotas se son sincronizando…
