--- a/an/toolkit/chrome/global/devtools/gclicommands.properties
+++ b/an/toolkit/chrome/global/devtools/gclicommands.properties
@@ -96,6 +96,14 @@ screenshotDelayDesc=Retardo (segundos)
 # asks for help on what it does.
 screenshotDelayManual=O tiempo ta aguardar (en segundos) antes que no siga presa una captura de pantalla
 
+# LOCALIZATION NOTE (screenshotDPIDesc) A very short string to describe
+# the 'dpi' parameter to the 'screenshot' command, which is displayed in
+# a dialog when the user is using this command.
+
+# LOCALIZATION NOTE (screenshotDPIManual) A fuller description of the
+# 'dpi' parameter to the 'screenshot' command, displayed when the user
+# asks for help on what it does.
+
 # LOCALIZATION NOTE (screenshotFullscreenDesc) A very short string to describe
 # the 'fullscreen' parameter to the 'screenshot' command, which is displayed in
 # a dialog when the user is using this command.
@@ -1574,7 +1582,6 @@ folderInvalidPath=Escriba una rota valida
 folderOpenDirResult=%1$S ubierto
 
 # LOCALIZATION NOTE (security)
-securityDesc=Amostrar as caracteristicas de seguridat suportadas
 securityManual=Comandos ta listar y obtener suchestions arredol de caracteristicas de seguranza ta o dominio actual.
 securityListDesc=Amostrar as caracteristicas de seguridat
 securityListManual=Amostrar una lista de todas as caracteristicas de seguranza relevantes ta la pachina actual.
@@ -1587,6 +1594,8 @@ securityCSPPotentialXSS=Vulnerabilidat potencial de XSS!
 securityCSPNoCSPOnPage=No s'ha puesto trobar a Politica de Seguranza de Conteniu ta
 securityCSPHeaderOnPage=Politica de seguranza de conteniu pa
 securityCSPROHeaderOnPage=Content-Security-Policy-Report-Only pa
+# Referrer Policy specific
+# LOCALIZATION NOTE: %1$S is the current page URI
 
 # LOCALIZATION NOTE (rulersDesc) A very short description of the
 # 'rulers' command. See rulersManual for a fuller description of what
