[az] update from Pootle (firefox)

--- a/az/browser/chrome/browser/accounts.properties
+++ b/az/browser/chrome/browser/accounts.properties
@@ -27,6 +27,8 @@ resendVerificationEmail.accessKey = T
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 reconnectDescription = %S ünvanını yenidən qoş
 
+# LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+
 forgetMigration.label = Unut
 forgetMigration.accessKey = U
 
@@ -43,6 +45,7 @@ verificationSentTitle = Təsdiqləmə Göndərildi
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
 verificationSentHeading = Təsdiqləmə linki %S ünvanına göndərildi
 verificationSentDescription = Lütfən e-poçtunuzu yoxlayın və sinxronizasiyanı başlamaq üçün linki klikləyin.
+# LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
 
 verificationNotSentTitle = Təsdiqləmə göndərilə bilmədi
 verificationNotSentHeading = Hal-hazırda təsdiqləmə poçtu göndərə bilmirik
