--- a/az/browser/chrome/browser/browser.properties
+++ b/az/browser/chrome/browser/browser.properties
@@ -500,9 +500,6 @@ webapps.doNotUninstall.accesskey = D
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 webapps.requestUninstall = “%1$S” proqramını silmək istəyirsiniz?\u0020
 
-# LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
-fullscreen.entered=%S artıq tam ekrandır.
-
 # LOCALIZATION NOTE (fullscreenButton.tooltip): %S is the keyboard shortcut for full screen
 fullscreenButton.tooltip=Pəncərəni tam ekranda göstər (%S)
 
@@ -570,6 +567,9 @@ getUserMedia.noScreen.label = Ekran yoxdur
 getUserMedia.noWindow.label = Pəncərə yoxdur
 getUserMedia.noAudio.label = Audio Yoxdur
 getUserMedia.shareEntireScreen.label = Bütün ekran
+# LOCALIZATION NOTE (getUserMedia.shareMonitor.label):
+# %S is screen number (digits 1, 2, etc)
+# Example: Screen 1, Screen 2,..
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -760,3 +760,4 @@ e10s.accessibilityNotice.disableAndRestart.label = Deaktiv et və Yenidən Başl
 e10s.accessibilityNotice.disableAndRestart.accesskey = Y
 e10s.accessibilityNotice.dontDisable.label = Deaktiv Etmə
 e10s.accessibilityNotice.dontDisable.accesskey = E
+
