--- a/az/browser/chrome/browser/sitePermissions.properties
+++ b/az/browser/chrome/browser/sitePermissions.properties
@@ -16,5 +16,5 @@ permission.install.label = Əlavələr Qur
 permission.popup.label = Peyda olan Pəncərələri Aç
 permission.geo.label = Sizin Məkanınızı Öyrənsin
 permission.indexedDB.label = Offline fayl saxlamanı idarə et
-permission.pointerLock.label = Siçanın Göstəricisini Gizlət
+permission.pointerLock.label = Mausun Göstəricisini Gizlət
 permission.push.label = Ani bildirişləri al
