--- a/az/browser/chrome/browser/tabbrowser.properties
+++ b/az/browser/chrome/browser/tabbrowser.properties
@@ -31,6 +31,8 @@ tabs.closeButtonMultiple=Vərəqləri qapat
 tabs.closeWarningPromptMe=Bir neçə vərəqi bağlamaq istədikdə mənə xəbərdarlıq et
 
 tabs.closeTab.tooltip=Vərəqi qapat
+# LOCALIZATION NOTE (tabs.closeSelectedTab.tooltip):
+# %S is the keyboard shortcut for closing the current tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
 # LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
