--- a/az/browser/chrome/browser/devtools/markers.properties
+++ b/az/browser/chrome/browser/devtools/markers.properties
@@ -15,7 +15,7 @@
 # These strings are displayed in the Performance Tool waterfall, identifying markers.
 # We want to use the same wording as Google Chrome when appropriate.
 marker.label.paint=Paint
-marker.label.garbageCollection=Əlavə GC
+marker.label.garbageCollection.incremental=Əlavə GC
 marker.label.timestamp=Vaxt Möhürü
 marker.label.unknown=Bilinmir
 
