--- a/az/browser/chrome/browser/loop/loop.properties
+++ b/az/browser/chrome/browser/loop/loop.properties
@@ -25,10 +25,9 @@ sign_in_again_button=Daxil ol
 ## will be replaced by the super short brandname.
 sign_in_again_use_as_guest_button2={{clientSuperShortname}} səyyahını Qonaq kimi işlət
 
-## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
-## replaced by the brand name
-first_time_experience_title={{clientShortname}} — Söhbətə qoşul
 first_time_experience_button_label=Başla
+## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
+## user to create his or her first conversation.
 
 invite_header_text=Sizə qoşulması üçün başqasını dəvət edin.
 
@@ -82,25 +81,23 @@ settings_menu_button_tooltip=Tənzimləmələr
 
 ## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
 ## the search field.
-contacts_search_placesholder=Axtar…
+contacts_search_placesholder2=Axtar…
 
-## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
-new_contact_button=Yeni Əlaqə
-## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
-## These are the placeholders for the fields for entering a new contact. Click
-## the 'New Contact' button to see the fields.
-new_contact_name_placeholder=Ad
-new_contact_email_placeholder=E-poçt
-new_contact_fxos_phone_placeholder=Firefox OS Telefonu
-new_contact_phone_placeholder2=Telefon
+## LOCALIZATION NOTE (contact_form_*_placeholder):
+## These are the placeholders for the inputs for entering or editing a contact
+## Click the 'New Contact' button to see the fields.
+contact_form_fxos_phone_placeholder=Firefox OS Telefonu
+contact_form_phone_placeholder2=Telefon
 
 contacts_blocked_contacts=Bloklanmış əlaqələr
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
-add_contact_button=Əlaqə əlavə et
+## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
+## panel. It is displayed when Add Contact is selected.
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -124,10 +121,16 @@ import_contacts_success_message={{total}} əlaqə uğurla idxal edildi.;{{total}
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Əlaqələri sinxronlaşdır
-## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
+## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
-## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
+## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
+## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
+## has no conversations available.
+## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
+## user to start a new conversation.
+## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
+## search returned no matching results.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -171,7 +174,6 @@ edit_contact_email_label=E-poçt
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
-edit_contact_done_button=Bitdi
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -185,8 +187,6 @@ video_call_menu_button=Video söhbət
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message=Əlaqələrinizin Gravatar e-poçt ünvanlarını paylaşmaqla onlara avtomatik olaraq profil təsvirlərini əlavə edə bilərsiz. {{learn_more}}.
 gravatars_promo_message_learnmore=Ətraflı öyrən
-gravatars_promo_button_nothanks=Xeyr, təşəkkürlər
-gravatars_promo_button_use=Profil Təsvirlərini işlət
 
 # Conversation Window Strings
 
@@ -202,8 +202,6 @@ hangup_button_title=Qapat
 hangup_button_caption2=Çıxış
 mute_local_audio_button_title=Səsi kəs
 unmute_local_audio_button_title=Səsi aç
-mute_local_video_button_title=Videonun səsini kəs
-unmute_local_video_button_title=Videonun səsini aç
 active_screenshare_button_title=Paylaşmanı dayandır
 inactive_screenshare_button_title=Ekranını paylaş
 share_tabs_button_title2=Vərəqlərinizi Paylaşın
@@ -240,7 +238,6 @@ restart_call=Yenidən qoşul
 contact_unavailable_title={{contactName}} məşğuldur.
 generic_contact_unavailable_title=Bu şəxs məşğuldur.
 
-generic_failure_title=Səhv baş verdi.
 generic_failure_with_reason2=Yenidən yoxlaya bilər və ya daha sonra əlaqə saxlamaq üçün e-poçt ilə link göndərə bilərsiniz.
 generic_failure_no_reason2=Yenidən yoxlamaq istəyirsiniz?
 
@@ -293,24 +290,17 @@ tour_label=Tur
 rooms_default_room_name_template=Söhbət {{conversationLabel}}
 rooms_leave_button_label=Tərk et
 rooms_list_copy_url_tooltip=Keçidi köçür
-## LOCALIZATION NOTE (rooms_list_current_conversations):
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## We prefer to have no number in the string, but if you need it for your
-## language please use {{num}}.
-rooms_list_current_conversations=Hazırki söhbət;Hazırki söhbətlər
+## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
+## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
 rooms_list_delete_tooltip=Söhbəti sil
 rooms_list_deleteConfirmation_label=Əminsiniz?
-rooms_list_no_current_conversations=Mövcud söhbət yoxdur
 rooms_change_failed_label=Söhbət yenilənə bilməz
 rooms_new_room_button_label=Söhbət başlat
-rooms_only_occupant_label=İlk gələn sizsiniz.
 rooms_panel_title=Bir söhbət seçin və ya yeni söhbət başladın
 rooms_room_full_label=Bu söhbətdə artıq iki nəfər var.
 rooms_room_full_call_to_action_nonFx_label=Öz söhbətinizi başladmaq üçün {{brandShortname}} səyyahını endirin
 rooms_room_full_call_to_action_label={{clientShortname}} haqqında məlumat alın »
 rooms_room_joined_label=Kimsə söhbətə qoşuldu!
-rooms_room_join_label=Söhbətə qoşul
 rooms_signout_alert=Açıq söhbətlər qapatılacaq
 
 # Infobar strings
@@ -323,12 +313,14 @@ infobar_menuitem_dontshowagain_accesskey=D
 
 # Context in conversation strings
 
-# LOCALIZATION NOTE (context_inroom_label): this string is followed by the
-# title/URL of the website you are having a conversation about, displayed on a
+# LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
+# conversation window when the user edits context. It is a header to the edit
+# section.
+# LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
+# title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
-context_inroom_label=Danışma mövzusu:
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
@@ -336,12 +328,12 @@ context_edit_activate_label="{{title}}" haqqında danış
 context_edit_name_placeholder=Söhbət Adı
 context_edit_comments_placeholder=Şərhlər
 context_add_some_label=Kontekst əlavə et
-context_edit_tooltip=Konteksti Dəyişdir
-context_hide_tooltip=Konteksti Gizlət
 context_show_tooltip=Konteksti Göstər
-context_save_label2=Dəyişiklikləri saxla
 context_link_modified=Bu keçid dəyişdirilib.
 context_learn_more_link_label=Ətraflı öyrən.
+conversation_settings_menu_edit_context=Konteksti Dəyişdir
+conversation_settings_menu_hide_context=Konteksti Gizlət
+
 
 # Text chat strings
 
