--- a/az/dom/chrome/security/security.properties
+++ b/az/dom/chrome/security/security.properties
@@ -8,7 +8,7 @@ BlockMixedActiveContent = "%1$S" qarışıq aktiv məzmununun yüklənməsi blok
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security", "HSTS", "max-age" or "includeSubDomains"
 
-# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age" or "includeSubDomains"
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age", "report-uri" or "includeSubDomains"
 
 # LOCALIZATION NOTE: Do not translate "SHA-1"
 InsecurePasswordsPresentOnPage=Etibarsız bir səhifədə (http://) şifrə sahələri var. Bu, istifadəçi giriş məlumatlarının oğurlanmasına səbəb ola biləcək təhlükəsizlik riskidir.
@@ -17,5 +17,13 @@ InsecurePasswordsPresentOnIframe=Etibarsız bir çərçivədə (http://) şifrə
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 
-# LOCALIZATION NOTE: Do not translate "SSL 3.0".
+# Sub-Resource Integrity
+# LOCALIZATION NOTE: Do not translate "script" or "integrity". "%1$S" is the invalid token found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the type of hash algorigthm in use (e.g. "sha256").
+# LOCALIZATION NOTE: "%1$S" is the URI of the sub-resource that cannot be protected using SRI.
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the invalid hash algorithm found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+
 # LOCALIZATION NOTE: Do not translate "RC4".
