[br] update from Pootle (firefox)

--- a/br/browser/chrome/browser/accounts.properties
+++ b/br/browser/chrome/browser/accounts.properties
@@ -27,6 +27,8 @@ resendVerificationEmail.accessKey = K
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 reconnectDescription = Adkennaskañ %S
 
+# LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+
 forgetMigration.label = Ankouaat
 forgetMigration.accessKey = A
 
@@ -43,6 +45,7 @@ verificationSentTitle = Kaset eo bet ar gemennadenn gwiriañ
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
 verificationSentHeading = Kaset ez eus bet un ere gwiriañ da %S
 verificationSentDescription = Gwiriit ho posteloù ha klikit war an ere evit kregiñ gant ar goubredañ.
+# LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
 
 verificationNotSentTitle = Dic'houest da gas ar gemennadenn gwiriañ
 verificationNotSentHeading = Dic'houest omp da gas ur postel gwiriañ evit ar mare
