--- a/br/browser/chrome/browser/tabbrowser.properties
+++ b/br/browser/chrome/browser/tabbrowser.properties
@@ -31,6 +31,8 @@ tabs.closeButtonMultiple=Serriñ an ivinelloù
 tabs.closeWarningPromptMe=Kemenn din pa glaskan serriñ meur a ivinell
 
 tabs.closeTab.tooltip=Serriñ an ivinell
+# LOCALIZATION NOTE (tabs.closeSelectedTab.tooltip):
+# %S is the keyboard shortcut for closing the current tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
 tabs.muteAudio.tooltip=Diweredekaat son an ivinell (%S)
