--- a/br/dom/chrome/security/security.properties
+++ b/br/dom/chrome/security/security.properties
@@ -27,7 +27,7 @@ STSMultipleIncludeSubdomains=Strict-Transport-Security: Erspizet eo bet un talbe
 STSInvalidIncludeSubdomains=Strict-Transport-Security : erspizet eo bet un talbenn oc'h enderc'hel ur sturiad 'includeSubDomains' didalvoud gant al lec'hienn.
 STSCouldNotSaveState=Strict-Transport-Security: ur fazi a zo c'hoarvezet en ur merkañ al lec'hienn evel un ostiz Strict-Transport-Security.
 
-# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age" or "includeSubDomains"
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age", "report-uri" or "includeSubDomains"
 PKPUnknownError=Public-Key-Pins : ur fazi dianav a zo c'hoarvezet e-pad keweriañ an talbenn erspizet gant al lec'hienn.
 PKPUntrustworthyConnection=Public-Key-Pins : n'haller ket kaout fiziañs er c'hennask d'al lec'hienn-mañ, neuze eo bet laosket an talbenn a-gostez.
 PKPCouldNotParseHeader=Public-Key-Pins: Erspizet eo bet un talbenn n'haller ket dezrannañ gant al lec'hienn.
@@ -53,7 +53,14 @@ LoadingMixedDisplayContent2=Kargadur endalc'hadoù kemmesk dioberiant (diziogel)
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Un iframe hag en deus allow-scripts hag allow-same-origin evit e vailh traezh a c'hell mont kuit eus e vailh traezh.
 
-# LOCALIZATION NOTE: Do not translate "SSL 3.0".
-WeakProtocolVersionWarning=Ar c'homenad SSL 3.0 a zo implijet gant al lec'hienn-mañ evit an enrinegañ, ar pezh a zo diamzeret hag arvarus.
+# Sub-Resource Integrity
+# LOCALIZATION NOTE: Do not translate "script" or "integrity". "%1$S" is the invalid token found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the type of hash algorigthm in use (e.g. "sha256").
+# LOCALIZATION NOTE: "%1$S" is the URI of the sub-resource that cannot be protected using SRI.
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the invalid hash algorithm found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+
 # LOCALIZATION NOTE: Do not translate "RC4".
 WeakCipherSuiteWarning=An hedad RC4 a zo implijet gant al lec'hienn-mañ evit an enrinegañ, ar pezh a zo diamzeret hag arvarus.\u0020
