--- a/br/browser/chrome/browser/loop/loop.properties
+++ b/br/browser/chrome/browser/loop/loop.properties
@@ -25,10 +25,9 @@ sign_in_again_button=Kennaskañ
 ## will be replaced by the super short brandname.
 sign_in_again_use_as_guest_button2=Arverañ {{clientSuperShortname}} e-giz ur c'houviad
 
-## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
-## replaced by the brand name
-first_time_experience_title={{clientShortname}} — Kemer perzh er gaozeadenn
 first_time_experience_button_label=Kregiñ ganti
+## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
+## user to create his or her first conversation.
 
 invite_header_text=Pediñ unan bennak da gontañ kaoz
 
@@ -86,25 +85,23 @@ settings_menu_button_tooltip=Arventennoù
 
 ## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
 ## the search field.
-contacts_search_placesholder=Klask…
+contacts_search_placesholder2=Klask…
 
-## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
-new_contact_button=Darempred nevez
-## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
-## These are the placeholders for the fields for entering a new contact. Click
-## the 'New Contact' button to see the fields.
-new_contact_name_placeholder=Anv
-new_contact_email_placeholder=Postel
-new_contact_fxos_phone_placeholder=Pellgomzer dre Firefox OS
-new_contact_phone_placeholder2=Pellgomz
+## LOCALIZATION NOTE (contact_form_*_placeholder):
+## These are the placeholders for the inputs for entering or editing a contact
+## Click the 'New Contact' button to see the fields.
+contact_form_fxos_phone_placeholder=Pellgomzer dre Firefox OS
+contact_form_phone_placeholder2=Pellgomz
 
 contacts_blocked_contacts=Darempredoù harzet
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
-add_contact_button=Ouzhpennañ un darempred
+## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
+## panel. It is displayed when Add Contact is selected.
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -128,12 +125,16 @@ import_contacts_success_message=Emporzhiet eo bet {{total}} darempred gant berzh
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Goubredañ an darempredoù
-## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
+## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
-no_contacts_message_heading=Darempred ebet c'hoazh
-## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
+## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
-no_contacts_import_or_add=Enporzhiañ pe ouzhpennañ unan bennak
+## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
+## has no conversations available.
+## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
+## user to start a new conversation.
+## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
+## search returned no matching results.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -180,7 +181,6 @@ edit_contact_email_label=Postel
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
-edit_contact_done_button=Graet
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -194,8 +194,6 @@ video_call_menu_button=Kaozeadenn video
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message=Tu 'zo deoc'h ouzhpennañ arlunioù aelad d'ho darempredoù ent emgefreek en ur rannañ o chomlec'hioù postel gant Gravatar. {{learn_more}}.
 gravatars_promo_message_learnmore=Gouzout hiroc'h
-gravatars_promo_button_nothanks=Nann trugarez
-gravatars_promo_button_use=Implijout arlunioù aelad
 
 # Conversation Window Strings
 
@@ -211,8 +209,6 @@ hangup_button_title=Adkregiñ
 hangup_button_caption2=Kuitaat
 mute_local_audio_button_title=Diweredekaat ar son
 unmute_local_audio_button_title=Gweredekaat ar son
-mute_local_video_button_title=Diweredekaat ar video
-unmute_local_video_button_title=Gweredekaat ar video
 active_screenshare_button_title=Paouez da rannañ
 inactive_screenshare_button_title=Rannit ho skramm
 share_tabs_button_title2=Rannañ ho ivinelloù
@@ -250,7 +246,6 @@ restart_call=Kejañ
 contact_unavailable_title=n'eo ket hegerz {{contactName}}.
 generic_contact_unavailable_title=N'eo ket hegerz an den-mañ.
 
-generic_failure_title=Degouezhet ez eus bet ur fazi.
 generic_failure_with_reason2=Gallout a rit klask en-dro pe kas un ere evit bezañ galvet diwezhatoc'h.
 generic_failure_no_reason2=Fellout a ra deoc'h klask en-dro ?
 
@@ -303,24 +298,17 @@ tour_label=Gweladenniñ
 rooms_default_room_name_template=Kaozeadenn {{conversationLabel}}
 rooms_leave_button_label=Kuitaat ar bajenn
 rooms_list_copy_url_tooltip=Eilañ an ere
-## LOCALIZATION NOTE (rooms_list_current_conversations):
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## We prefer to have no number in the string, but if you need it for your
-## language please use {{num}}.
-rooms_list_current_conversations=Kaozeadenn vremanel;Kaozeadennoù bremanel
+## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
+## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
 rooms_list_delete_tooltip=Diverkañ ar gaozeadenn
 rooms_list_deleteConfirmation_label=Sur oc'h?
-rooms_list_no_current_conversations=Kaozeadenn ebet evit poent
 rooms_change_failed_label=N'eo ket posupl hizivaat ar gaozeadenn
 rooms_new_room_button_label=Kregiñ ur gaozeadenn
-rooms_only_occupant_label=An hini kentañ ez oc'h amañ.
 rooms_panel_title=Dibabit ur gaozeadenn pe gregiñ gant unan nevez.
 rooms_room_full_label=Daou zen ez eus endeo gant ar gaozeadenn-mañ.
 rooms_room_full_call_to_action_nonFx_label=Pellgargit {{brandShortname}} da gregiñ gant unan deoc'h
 rooms_room_full_call_to_action_label=Gouzout hiroc'h a-zivout {{clientShortname}} »
 rooms_room_joined_label=Unan bennak en deus kemeret perzh er gaozeadenn !
-rooms_room_join_label=Mont davet ar gaozeadenn
 rooms_signout_alert=Serret e vo ar c'haozeadennoù digoret
 
 # Infobar strings
@@ -333,12 +321,14 @@ infobar_menuitem_dontshowagain_accesskey=A
 
 # Context in conversation strings
 
-# LOCALIZATION NOTE (context_inroom_label): this string is followed by the
-# title/URL of the website you are having a conversation about, displayed on a
+# LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
+# conversation window when the user edits context. It is a header to the edit
+# section.
+# LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
+# title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
-context_inroom_label=Komzomp diwar-benn :
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
@@ -346,12 +336,12 @@ context_edit_activate_label=Komz diwar-benn"{{title}}"
 context_edit_name_placeholder=Anv an eskemm
 context_edit_comments_placeholder=Evezhiadennoù
 context_add_some_label=Ouzhpennañ un nebeut kemperzh
-context_edit_tooltip=Embann ar c'hemperzh
-context_hide_tooltip=Kuzhat ar c'hemperzh
 context_show_tooltip=Diskouez ar c'hemperzh
-context_save_label2=Save
 context_link_modified=Kemmet eo bet an ere-mañ.
 context_learn_more_link_label=Gouzout hiroc'h.
+conversation_settings_menu_edit_context=Embann ar c'hemperzh
+conversation_settings_menu_hide_context=Kuzhat ar c'hemperzh
+
 
 # Text chat strings
 
